// Vitest Snapshot v1

exports[`wing compile captures.w > cdk.tf.json 1`] = `
{
  "//": {
    "metadata": {
      "backend": "local",
      "stackName": "root",
      "version": "0.13.3",
    },
    "outputs": {},
  },
  "provider": {
    "aws": [
      {},
    ],
  },
  "resource": {
    "aws_iam_role": {
      "root_cloudFunction_IamRole_DAEC3578": {
        "//": {
          "metadata": {
            "path": "root/cloud.Function/IamRole",
            "uniqueId": "root_cloudFunction_IamRole_DAEC3578",
          },
        },
        "assume_role_policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":\\"sts:AssumeRole\\",\\"Principal\\":{\\"Service\\":\\"lambda.amazonaws.com\\"},\\"Effect\\":\\"Allow\\"}]}",
      },
    },
    "aws_iam_role_policy": {
      "root_cloudFunction_IamRolePolicy_AAE6C0C0": {
        "//": {
          "metadata": {
            "path": "root/cloud.Function/IamRolePolicy",
            "uniqueId": "root_cloudFunction_IamRolePolicy_AAE6C0C0",
          },
        },
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":[\\"s3:PutObject*\\",\\"s3:Abort*\\"],\\"Resource\\":[\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}\\",\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}/*\\"],\\"Effect\\":\\"Allow\\"},{\\"Action\\":[\\"s3:GetObject*\\",\\"s3:GetBucket*\\",\\"s3:List*\\"],\\"Resource\\":[\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}\\",\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}/*\\"],\\"Effect\\":\\"Allow\\"},{\\"Action\\":[\\"s3:GetObject*\\",\\"s3:GetBucket*\\",\\"s3:List*\\"],\\"Resource\\":[\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}\\",\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}/*\\"],\\"Effect\\":\\"Allow\\"},{\\"Action\\":[\\"s3:PutObject*\\",\\"s3:Abort*\\"],\\"Resource\\":[\\"\${aws_s3_bucket.root_PublicBucket_73AE6C59.arn}\\",\\"\${aws_s3_bucket.root_PublicBucket_73AE6C59.arn}/*\\"],\\"Effect\\":\\"Allow\\"},{\\"Action\\":[\\"s3:GetObject*\\",\\"s3:GetBucket*\\",\\"s3:List*\\"],\\"Resource\\":[\\"\${aws_s3_bucket.root_PublicBucket_73AE6C59.arn}\\",\\"\${aws_s3_bucket.root_PublicBucket_73AE6C59.arn}/*\\"],\\"Effect\\":\\"Allow\\"},{\\"Action\\":[\\"s3:GetObject*\\",\\"s3:GetBucket*\\",\\"s3:List*\\"],\\"Resource\\":[\\"\${aws_s3_bucket.root_PublicBucket_73AE6C59.arn}\\",\\"\${aws_s3_bucket.root_PublicBucket_73AE6C59.arn}/*\\"],\\"Effect\\":\\"Allow\\"}]}",
        "role": "\${aws_iam_role.root_cloudFunction_IamRole_DAEC3578.name}",
      },
    },
    "aws_iam_role_policy_attachment": {
      "root_cloudFunction_IamRolePolicyAttachment_FC3D9E7C": {
        "//": {
          "metadata": {
            "path": "root/cloud.Function/IamRolePolicyAttachment",
            "uniqueId": "root_cloudFunction_IamRolePolicyAttachment_FC3D9E7C",
          },
        },
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.root_cloudFunction_IamRole_DAEC3578.name}",
      },
    },
    "aws_lambda_function": {
      "root_cloudFunction_6A57BA0A": {
        "//": {
          "metadata": {
            "path": "root/cloud.Function/Default",
            "uniqueId": "root_cloudFunction_6A57BA0A",
          },
        },
        "environment": {
          "variables": {
            "BUCKET_NAME_21bd2572": "\${aws_s3_bucket.root_PublicBucket_73AE6C59.bucket}",
            "BUCKET_NAME_d755b447": "\${aws_s3_bucket.root_cloudBucket_4F3C4F53.bucket}",
            "WING_FUNCTION_NAME": "cloud.Function",
          },
        },
        "function_name": "cloud.Function",
        "handler": "index.handler",
        "role": "\${aws_iam_role.root_cloudFunction_IamRole_DAEC3578.arn}",
        "runtime": "nodejs16.x",
        "s3_bucket": "\${aws_s3_bucket.root_cloudFunction_Bucket_245CAEB7.bucket}",
        "s3_key": "\${aws_s3_object.root_cloudFunction_S3Object_C8435368.key}",
      },
    },
    "aws_s3_bucket": {
      "root_PublicBucket_73AE6C59": {
        "//": {
          "metadata": {
            "path": "root/PublicBucket/Default",
            "uniqueId": "root_PublicBucket_73AE6C59",
          },
        },
      },
      "root_cloudBucket_4F3C4F53": {
        "//": {
          "metadata": {
            "path": "root/cloud.Bucket/Default",
            "uniqueId": "root_cloudBucket_4F3C4F53",
          },
        },
      },
      "root_cloudFunction_Bucket_245CAEB7": {
        "//": {
          "metadata": {
            "path": "root/cloud.Function/Bucket",
            "uniqueId": "root_cloudFunction_Bucket_245CAEB7",
          },
        },
      },
    },
    "aws_s3_bucket_policy": {
      "root_PublicBucket_PublicPolicy_98DDAE96": {
        "//": {
          "metadata": {
            "path": "root/PublicBucket/PublicPolicy",
            "uniqueId": "root_PublicBucket_PublicPolicy_98DDAE96",
          },
        },
        "bucket": "\${aws_s3_bucket.root_PublicBucket_73AE6C59.bucket}",
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Effect\\":\\"Allow\\",\\"Principal\\":\\"*\\",\\"Action\\":[\\"s3:GetObject\\"],\\"Resource\\":[\\"\${aws_s3_bucket.root_PublicBucket_73AE6C59.arn}/*\\"]}]}",
      },
    },
    "aws_s3_bucket_public_access_block": {
      "root_cloudBucket_PublicAccessBlock_319C1C2E": {
        "//": {
          "metadata": {
            "path": "root/cloud.Bucket/PublicAccessBlock",
            "uniqueId": "root_cloudBucket_PublicAccessBlock_319C1C2E",
          },
        },
        "block_public_acls": true,
        "block_public_policy": true,
        "bucket": "\${aws_s3_bucket.root_cloudBucket_4F3C4F53.bucket}",
        "ignore_public_acls": true,
        "restrict_public_buckets": true,
      },
    },
    "aws_s3_bucket_server_side_encryption_configuration": {
      "root_PublicBucket_Encryption_FB9A8400": {
        "//": {
          "metadata": {
            "path": "root/PublicBucket/Encryption",
            "uniqueId": "root_PublicBucket_Encryption_FB9A8400",
          },
        },
        "bucket": "\${aws_s3_bucket.root_PublicBucket_73AE6C59.bucket}",
        "rule": [
          {
            "apply_server_side_encryption_by_default": {
              "sse_algorithm": "AES256",
            },
          },
        ],
      },
      "root_cloudBucket_Encryption_8ED0CD9C": {
        "//": {
          "metadata": {
            "path": "root/cloud.Bucket/Encryption",
            "uniqueId": "root_cloudBucket_Encryption_8ED0CD9C",
          },
        },
        "bucket": "\${aws_s3_bucket.root_cloudBucket_4F3C4F53.bucket}",
        "rule": [
          {
            "apply_server_side_encryption_by_default": {
              "sse_algorithm": "AES256",
            },
          },
        ],
      },
    },
    "aws_s3_object": {
      "root_cloudFunction_S3Object_C8435368": {
        "//": {
          "metadata": {
            "path": "root/cloud.Function/S3Object",
            "uniqueId": "root_cloudFunction_S3Object_C8435368",
          },
        },
        "bucket": "\${aws_s3_bucket.root_cloudFunction_Bucket_245CAEB7.bucket}",
        "key": "<ASSET_KEY>",
      },
    },
  },
}
`;

exports[`wing compile captures.w > index.js 1`] = `
{
  "data": [
    97,
    115,
    121,
    110,
    99,
    32,
    102,
    117,
    110,
    99,
    116,
    105,
    111,
    110,
    32,
    36,
    112,
    114,
    111,
    99,
    40,
    123,
    32,
    98,
    117,
    99,
    107,
    101,
    116,
    49,
    44,
    32,
    98,
    117,
    99,
    107,
    101,
    116,
    50,
    32,
    125,
    44,
    32,
    101,
    118,
    101,
    110,
    116,
    41,
    32,
    123,
    10,
    32,
    32,
    98,
    117,
    99,
    107,
    101,
    116,
    49,
    46,
    112,
    117,
    116,
    40,
    34,
    102,
    105,
    108,
    101,
    46,
    116,
    120,
    116,
    34,
    44,
    34,
    100,
    97,
    116,
    97,
    34,
    41,
    59,
    10,
    32,
    32,
    98,
    117,
    99,
    107,
    101,
    116,
    50,
    46,
    103,
    101,
    116,
    40,
    34,
    102,
    105,
    108,
    101,
    46,
    116,
    120,
    116,
    34,
    41,
    59,
    10,
    125,
    59,
  ],
  "type": "Buffer",
}
`;

exports[`wing compile captures.w > manifest.json 1`] = `
{
  "stacks": {
    "root": {
      "annotations": [],
      "constructPath": "root",
      "dependencies": [],
      "name": "root",
      "synthesizedStackPath": "stacks/root/cdk.tf.json",
      "workingDirectory": "stacks/root",
    },
  },
  "version": "0.13.3",
}
`;

exports[`wing compile captures.w > preflight.js 1`] = `
{
  "data": [
    99,
    111,
    110,
    115,
    116,
    32,
    36,
    115,
    116,
    100,
    108,
    105,
    98,
    32,
    61,
    32,
    114,
    101,
    113,
    117,
    105,
    114,
    101,
    40,
    39,
    64,
    119,
    105,
    110,
    103,
    108,
    97,
    110,
    103,
    47,
    119,
    105,
    110,
    103,
    115,
    100,
    107,
    39,
    41,
    59,
    10,
    99,
    111,
    110,
    115,
    116,
    32,
    36,
    111,
    117,
    116,
    100,
    105,
    114,
    32,
    61,
    32,
    112,
    114,
    111,
    99,
    101,
    115,
    115,
    46,
    101,
    110,
    118,
    46,
    87,
    73,
    78,
    71,
    83,
    68,
    75,
    95,
    83,
    89,
    78,
    84,
    72,
    95,
    68,
    73,
    82,
    32,
    63,
    63,
    32,
    34,
    46,
    34,
    59,
    10,
    10,
    102,
    117,
    110,
    99,
    116,
    105,
    111,
    110,
    32,
    95,
    95,
    97,
    112,
    112,
    40,
    116,
    97,
    114,
    103,
    101,
    116,
    41,
    32,
    123,
    10,
    9,
    115,
    119,
    105,
    116,
    99,
    104,
    32,
    40,
    116,
    97,
    114,
    103,
    101,
    116,
    41,
    32,
    123,
    10,
    9,
    9,
    99,
    97,
    115,
    101,
    32,
    34,
    115,
    105,
    109,
    34,
    58,
    10,
    9,
    9,
    9,
    114,
    101,
    116,
    117,
    114,
    110,
    32,
    36,
    115,
    116,
    100,
    108,
    105,
    98,
    46,
    115,
    105,
    109,
    46,
    65,
    112,
    112,
    59,
    10,
    9,
    9,
    99,
    97,
    115,
    101,
    32,
    34,
    116,
    102,
    97,
    119,
    115,
    34,
    58,
    10,
    9,
    9,
    99,
    97,
    115,
    101,
    32,
    34,
    116,
    102,
    45,
    97,
    119,
    115,
    34,
    58,
    10,
    9,
    9,
    9,
    114,
    101,
    116,
    117,
    114,
    110,
    32,
    36,
    115,
    116,
    100,
    108,
    105,
    98,
    46,
    116,
    102,
    97,
    119,
    115,
    46,
    65,
    112,
    112,
    59,
    10,
    9,
    9,
    100,
    101,
    102,
    97,
    117,
    108,
    116,
    58,
    10,
    9,
    9,
    9,
    116,
    104,
    114,
    111,
    119,
    32,
    110,
    101,
    119,
    32,
    69,
    114,
    114,
    111,
    114,
    40,
    96,
    85,
    110,
    107,
    110,
    111,
    119,
    110,
    32,
    87,
    73,
    78,
    71,
    95,
    84,
    65,
    82,
    71,
    69,
    84,
    32,
    118,
    97,
    108,
    117,
    101,
    58,
    32,
    34,
    36,
    123,
    112,
    114,
    111,
    99,
    101,
    115,
    115,
    46,
    101,
    110,
    118,
    46,
    87,
    73,
    78,
    71,
    95,
    84,
    65,
    82,
    71,
    69,
    84,
    32,
    63,
    63,
    32,
    34,
    34,
    125,
    34,
    96,
    41,
    59,
    10,
    9,
    125,
    10,
    125,
    10,
    99,
    111,
    110,
    115,
    116,
    32,
    36,
    65,
    112,
    112,
    32,
    61,
    32,
    95,
    95,
    97,
    112,
    112,
    40,
    112,
    114,
    111,
    99,
    101,
    115,
    115,
    46,
    101,
    110,
    118,
    46,
    87,
    73,
    78,
    71,
    95,
    84,
    65,
    82,
    71,
    69,
    84,
    41,
    59,
    10,
    10,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    108,
    111,
    117,
    100,
    32,
    61,
    32,
    114,
    101,
    113,
    117,
    105,
    114,
    101,
    40,
    39,
    64,
    119,
    105,
    110,
    103,
    108,
    97,
    110,
    103,
    47,
    119,
    105,
    110,
    103,
    115,
    100,
    107,
    39,
    41,
    46,
    99,
    108,
    111,
    117,
    100,
    59,
    10,
    99,
    108,
    97,
    115,
    115,
    32,
    77,
    121,
    65,
    112,
    112,
    32,
    101,
    120,
    116,
    101,
    110,
    100,
    115,
    32,
    36,
    65,
    112,
    112,
    32,
    123,
    10,
    99,
    111,
    110,
    115,
    116,
    114,
    117,
    99,
    116,
    111,
    114,
    40,
    41,
    32,
    123,
    10,
    32,
    32,
    115,
    117,
    112,
    101,
    114,
    40,
    123,
    32,
    111,
    117,
    116,
    100,
    105,
    114,
    58,
    32,
    36,
    111,
    117,
    116,
    100,
    105,
    114,
    44,
    32,
    110,
    97,
    109,
    101,
    58,
    32,
    34,
    99,
    97,
    112,
    116,
    117,
    114,
    101,
    115,
    34,
    32,
    125,
    41,
    59,
    10,
    32,
    32,
    10,
    32,
    32,
    108,
    101,
    116,
    32,
    98,
    117,
    99,
    107,
    101,
    116,
    49,
    32,
    61,
    32,
    110,
    101,
    119,
    32,
    99,
    108,
    111,
    117,
    100,
    46,
    66,
    117,
    99,
    107,
    101,
    116,
    40,
    116,
    104,
    105,
    115,
    44,
    34,
    99,
    108,
    111,
    117,
    100,
    46,
    66,
    117,
    99,
    107,
    101,
    116,
    34,
    41,
    59,
    10,
    32,
    32,
    108,
    101,
    116,
    32,
    98,
    117,
    99,
    107,
    101,
    116,
    50,
    32,
    61,
    32,
    110,
    101,
    119,
    32,
    99,
    108,
    111,
    117,
    100,
    46,
    66,
    117,
    99,
    107,
    101,
    116,
    40,
    116,
    104,
    105,
    115,
    44,
    34,
    80,
    117,
    98,
    108,
    105,
    99,
    66,
    117,
    99,
    107,
    101,
    116,
    34,
    44,
    123,
    10,
    32,
    32,
    34,
    112,
    117,
    98,
    108,
    105,
    99,
    34,
    58,
    32,
    116,
    114,
    117,
    101,
    44,
    125,
    10,
    32,
    32,
    41,
    59,
    10,
    32,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    104,
    97,
    110,
    100,
    108,
    101,
    114,
    32,
    61,
    32,
    110,
    101,
    119,
    32,
    36,
    115,
    116,
    100,
    108,
    105,
    98,
    46,
    99,
    111,
    114,
    101,
    46,
    73,
    110,
    102,
    108,
    105,
    103,
    104,
    116,
    40,
    123,
    10,
    32,
    32,
    32,
    32,
    99,
    111,
    100,
    101,
    58,
    32,
    36,
    115,
    116,
    100,
    108,
    105,
    98,
    46,
    99,
    111,
    114,
    101,
    46,
    78,
    111,
    100,
    101,
    74,
    115,
    67,
    111,
    100,
    101,
    46,
    102,
    114,
    111,
    109,
    70,
    105,
    108,
    101,
    40,
    114,
    101,
    113,
    117,
    105,
    114,
    101,
    40,
    39,
    112,
    97,
    116,
    104,
    39,
    41,
    46,
    114,
    101,
    115,
    111,
    108,
    118,
    101,
    40,
    95,
    95,
    100,
    105,
    114,
    110,
    97,
    109,
    101,
    44,
    32,
    34,
    112,
    114,
    111,
    99,
    46,
    99,
    49,
    53,
    102,
    52,
    100,
    57,
    55,
    55,
    98,
    55,
    50,
    52,
    50,
    57,
    49,
    102,
    102,
    52,
    50,
    57,
    97,
    97,
    100,
    51,
    48,
    99,
    53,
    100,
    50,
    97,
    99,
    54,
    52,
    55,
    51,
    49,
    101,
    98,
    52,
    101,
    56,
    55,
    56,
    97,
    97,
    53,
    57,
    50,
    97,
    98,
    54,
    50,
    55,
    57,
    53,
    102,
    101,
    55,
    51,
    52,
    49,
    56,
    100,
    47,
    105,
    110,
    100,
    101,
    120,
    46,
    106,
    115,
    34,
    41,
    41,
    44,
    10,
    32,
    32,
    32,
    32,
    101,
    110,
    116,
    114,
    121,
    112,
    111,
    105,
    110,
    116,
    58,
    32,
    34,
    36,
    112,
    114,
    111,
    99,
    34,
    44,
    10,
    32,
    32,
    32,
    32,
    99,
    97,
    112,
    116,
    117,
    114,
    101,
    115,
    58,
    32,
    123,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    98,
    117,
    99,
    107,
    101,
    116,
    49,
    58,
    32,
    123,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    114,
    101,
    115,
    111,
    117,
    114,
    99,
    101,
    58,
    32,
    98,
    117,
    99,
    107,
    101,
    116,
    49,
    44,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    109,
    101,
    116,
    104,
    111,
    100,
    115,
    58,
    32,
    91,
    34,
    103,
    101,
    116,
    34,
    44,
    34,
    108,
    105,
    115,
    116,
    34,
    44,
    34,
    112,
    117,
    116,
    34,
    93,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    125,
    44,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    98,
    117,
    99,
    107,
    101,
    116,
    50,
    58,
    32,
    123,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    114,
    101,
    115,
    111,
    117,
    114,
    99,
    101,
    58,
    32,
    98,
    117,
    99,
    107,
    101,
    116,
    50,
    44,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    109,
    101,
    116,
    104,
    111,
    100,
    115,
    58,
    32,
    91,
    34,
    103,
    101,
    116,
    34,
    44,
    34,
    108,
    105,
    115,
    116,
    34,
    44,
    34,
    112,
    117,
    116,
    34,
    93,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    125,
    44,
    10,
    32,
    32,
    32,
    32,
    125,
    10,
    32,
    32,
    125,
    41,
    59,
    10,
    32,
    32,
    110,
    101,
    119,
    32,
    99,
    108,
    111,
    117,
    100,
    46,
    70,
    117,
    110,
    99,
    116,
    105,
    111,
    110,
    40,
    116,
    104,
    105,
    115,
    44,
    34,
    99,
    108,
    111,
    117,
    100,
    46,
    70,
    117,
    110,
    99,
    116,
    105,
    111,
    110,
    34,
    44,
    104,
    97,
    110,
    100,
    108,
    101,
    114,
    44,
    123,
    10,
    32,
    32,
    34,
    101,
    110,
    118,
    34,
    58,
    32,
    123,
    10,
    32,
    32,
    10,
    32,
    32,
    125,
    44,
    125,
    10,
    32,
    32,
    41,
    59,
    10,
    125,
    10,
    125,
    10,
    110,
    101,
    119,
    32,
    77,
    121,
    65,
    112,
    112,
    40,
    41,
    46,
    115,
    121,
    110,
    116,
    104,
    40,
    41,
    59,
  ],
  "type": "Buffer",
}
`;

exports[`wing compile expressions_binary_operators.w > cdk.tf.json 1`] = `
{
  "//": {
    "metadata": {
      "backend": "local",
      "stackName": "root",
      "version": "0.13.3",
    },
    "outputs": {},
  },
  "provider": {
    "aws": [
      {},
    ],
  },
}
`;

exports[`wing compile expressions_binary_operators.w > manifest.json 1`] = `
{
  "stacks": {
    "root": {
      "annotations": [],
      "constructPath": "root",
      "dependencies": [],
      "name": "root",
      "synthesizedStackPath": "stacks/root/cdk.tf.json",
      "workingDirectory": "stacks/root",
    },
  },
  "version": "0.13.3",
}
`;

exports[`wing compile expressions_binary_operators.w > preflight.js 1`] = `
{
  "data": [
    99,
    111,
    110,
    115,
    116,
    32,
    36,
    115,
    116,
    100,
    108,
    105,
    98,
    32,
    61,
    32,
    114,
    101,
    113,
    117,
    105,
    114,
    101,
    40,
    39,
    64,
    119,
    105,
    110,
    103,
    108,
    97,
    110,
    103,
    47,
    119,
    105,
    110,
    103,
    115,
    100,
    107,
    39,
    41,
    59,
    10,
    99,
    111,
    110,
    115,
    116,
    32,
    36,
    111,
    117,
    116,
    100,
    105,
    114,
    32,
    61,
    32,
    112,
    114,
    111,
    99,
    101,
    115,
    115,
    46,
    101,
    110,
    118,
    46,
    87,
    73,
    78,
    71,
    83,
    68,
    75,
    95,
    83,
    89,
    78,
    84,
    72,
    95,
    68,
    73,
    82,
    32,
    63,
    63,
    32,
    34,
    46,
    34,
    59,
    10,
    10,
    102,
    117,
    110,
    99,
    116,
    105,
    111,
    110,
    32,
    95,
    95,
    97,
    112,
    112,
    40,
    116,
    97,
    114,
    103,
    101,
    116,
    41,
    32,
    123,
    10,
    9,
    115,
    119,
    105,
    116,
    99,
    104,
    32,
    40,
    116,
    97,
    114,
    103,
    101,
    116,
    41,
    32,
    123,
    10,
    9,
    9,
    99,
    97,
    115,
    101,
    32,
    34,
    115,
    105,
    109,
    34,
    58,
    10,
    9,
    9,
    9,
    114,
    101,
    116,
    117,
    114,
    110,
    32,
    36,
    115,
    116,
    100,
    108,
    105,
    98,
    46,
    115,
    105,
    109,
    46,
    65,
    112,
    112,
    59,
    10,
    9,
    9,
    99,
    97,
    115,
    101,
    32,
    34,
    116,
    102,
    97,
    119,
    115,
    34,
    58,
    10,
    9,
    9,
    99,
    97,
    115,
    101,
    32,
    34,
    116,
    102,
    45,
    97,
    119,
    115,
    34,
    58,
    10,
    9,
    9,
    9,
    114,
    101,
    116,
    117,
    114,
    110,
    32,
    36,
    115,
    116,
    100,
    108,
    105,
    98,
    46,
    116,
    102,
    97,
    119,
    115,
    46,
    65,
    112,
    112,
    59,
    10,
    9,
    9,
    100,
    101,
    102,
    97,
    117,
    108,
    116,
    58,
    10,
    9,
    9,
    9,
    116,
    104,
    114,
    111,
    119,
    32,
    110,
    101,
    119,
    32,
    69,
    114,
    114,
    111,
    114,
    40,
    96,
    85,
    110,
    107,
    110,
    111,
    119,
    110,
    32,
    87,
    73,
    78,
    71,
    95,
    84,
    65,
    82,
    71,
    69,
    84,
    32,
    118,
    97,
    108,
    117,
    101,
    58,
    32,
    34,
    36,
    123,
    112,
    114,
    111,
    99,
    101,
    115,
    115,
    46,
    101,
    110,
    118,
    46,
    87,
    73,
    78,
    71,
    95,
    84,
    65,
    82,
    71,
    69,
    84,
    32,
    63,
    63,
    32,
    34,
    34,
    125,
    34,
    96,
    41,
    59,
    10,
    9,
    125,
    10,
    125,
    10,
    99,
    111,
    110,
    115,
    116,
    32,
    36,
    65,
    112,
    112,
    32,
    61,
    32,
    95,
    95,
    97,
    112,
    112,
    40,
    112,
    114,
    111,
    99,
    101,
    115,
    115,
    46,
    101,
    110,
    118,
    46,
    87,
    73,
    78,
    71,
    95,
    84,
    65,
    82,
    71,
    69,
    84,
    41,
    59,
    10,
    10,
    99,
    108,
    97,
    115,
    115,
    32,
    77,
    121,
    65,
    112,
    112,
    32,
    101,
    120,
    116,
    101,
    110,
    100,
    115,
    32,
    36,
    65,
    112,
    112,
    32,
    123,
    10,
    99,
    111,
    110,
    115,
    116,
    114,
    117,
    99,
    116,
    111,
    114,
    40,
    41,
    32,
    123,
    10,
    32,
    32,
    115,
    117,
    112,
    101,
    114,
    40,
    123,
    32,
    111,
    117,
    116,
    100,
    105,
    114,
    58,
    32,
    36,
    111,
    117,
    116,
    100,
    105,
    114,
    44,
    32,
    110,
    97,
    109,
    101,
    58,
    32,
    34,
    101,
    120,
    112,
    114,
    101,
    115,
    115,
    105,
    111,
    110,
    115,
    95,
    98,
    105,
    110,
    97,
    114,
    121,
    95,
    111,
    112,
    101,
    114,
    97,
    116,
    111,
    114,
    115,
    34,
    32,
    125,
    41,
    59,
    10,
    32,
    32,
    10,
    32,
    32,
    108,
    101,
    116,
    32,
    120,
    32,
    61,
    32,
    49,
    59,
    10,
    32,
    32,
    108,
    101,
    116,
    32,
    121,
    32,
    61,
    32,
    40,
    50,
    32,
    42,
    32,
    120,
    41,
    59,
    10,
    32,
    32,
    108,
    101,
    116,
    32,
    122,
    32,
    61,
    32,
    40,
    40,
    120,
    32,
    43,
    32,
    121,
    41,
    32,
    45,
    32,
    49,
    41,
    59,
    10,
    32,
    32,
    108,
    101,
    116,
    32,
    120,
    121,
    122,
    32,
    61,
    32,
    40,
    40,
    40,
    121,
    32,
    42,
    32,
    121,
    41,
    32,
    47,
    32,
    40,
    120,
    32,
    42,
    32,
    120,
    41,
    41,
    32,
    42,
    32,
    122,
    41,
    59,
    10,
    125,
    10,
    125,
    10,
    110,
    101,
    119,
    32,
    77,
    121,
    65,
    112,
    112,
    40,
    41,
    46,
    115,
    121,
    110,
    116,
    104,
    40,
    41,
    59,
  ],
  "type": "Buffer",
}
`;

exports[`wing compile expressions_string_interpolation.w > cdk.tf.json 1`] = `
{
  "//": {
    "metadata": {
      "backend": "local",
      "stackName": "root",
      "version": "0.13.3",
    },
    "outputs": {},
  },
  "provider": {
    "aws": [
      {},
    ],
  },
}
`;

exports[`wing compile expressions_string_interpolation.w > manifest.json 1`] = `
{
  "stacks": {
    "root": {
      "annotations": [],
      "constructPath": "root",
      "dependencies": [],
      "name": "root",
      "synthesizedStackPath": "stacks/root/cdk.tf.json",
      "workingDirectory": "stacks/root",
    },
  },
  "version": "0.13.3",
}
`;

exports[`wing compile expressions_string_interpolation.w > preflight.js 1`] = `
{
  "data": [
    99,
    111,
    110,
    115,
    116,
    32,
    36,
    115,
    116,
    100,
    108,
    105,
    98,
    32,
    61,
    32,
    114,
    101,
    113,
    117,
    105,
    114,
    101,
    40,
    39,
    64,
    119,
    105,
    110,
    103,
    108,
    97,
    110,
    103,
    47,
    119,
    105,
    110,
    103,
    115,
    100,
    107,
    39,
    41,
    59,
    10,
    99,
    111,
    110,
    115,
    116,
    32,
    36,
    111,
    117,
    116,
    100,
    105,
    114,
    32,
    61,
    32,
    112,
    114,
    111,
    99,
    101,
    115,
    115,
    46,
    101,
    110,
    118,
    46,
    87,
    73,
    78,
    71,
    83,
    68,
    75,
    95,
    83,
    89,
    78,
    84,
    72,
    95,
    68,
    73,
    82,
    32,
    63,
    63,
    32,
    34,
    46,
    34,
    59,
    10,
    10,
    102,
    117,
    110,
    99,
    116,
    105,
    111,
    110,
    32,
    95,
    95,
    97,
    112,
    112,
    40,
    116,
    97,
    114,
    103,
    101,
    116,
    41,
    32,
    123,
    10,
    9,
    115,
    119,
    105,
    116,
    99,
    104,
    32,
    40,
    116,
    97,
    114,
    103,
    101,
    116,
    41,
    32,
    123,
    10,
    9,
    9,
    99,
    97,
    115,
    101,
    32,
    34,
    115,
    105,
    109,
    34,
    58,
    10,
    9,
    9,
    9,
    114,
    101,
    116,
    117,
    114,
    110,
    32,
    36,
    115,
    116,
    100,
    108,
    105,
    98,
    46,
    115,
    105,
    109,
    46,
    65,
    112,
    112,
    59,
    10,
    9,
    9,
    99,
    97,
    115,
    101,
    32,
    34,
    116,
    102,
    97,
    119,
    115,
    34,
    58,
    10,
    9,
    9,
    99,
    97,
    115,
    101,
    32,
    34,
    116,
    102,
    45,
    97,
    119,
    115,
    34,
    58,
    10,
    9,
    9,
    9,
    114,
    101,
    116,
    117,
    114,
    110,
    32,
    36,
    115,
    116,
    100,
    108,
    105,
    98,
    46,
    116,
    102,
    97,
    119,
    115,
    46,
    65,
    112,
    112,
    59,
    10,
    9,
    9,
    100,
    101,
    102,
    97,
    117,
    108,
    116,
    58,
    10,
    9,
    9,
    9,
    116,
    104,
    114,
    111,
    119,
    32,
    110,
    101,
    119,
    32,
    69,
    114,
    114,
    111,
    114,
    40,
    96,
    85,
    110,
    107,
    110,
    111,
    119,
    110,
    32,
    87,
    73,
    78,
    71,
    95,
    84,
    65,
    82,
    71,
    69,
    84,
    32,
    118,
    97,
    108,
    117,
    101,
    58,
    32,
    34,
    36,
    123,
    112,
    114,
    111,
    99,
    101,
    115,
    115,
    46,
    101,
    110,
    118,
    46,
    87,
    73,
    78,
    71,
    95,
    84,
    65,
    82,
    71,
    69,
    84,
    32,
    63,
    63,
    32,
    34,
    34,
    125,
    34,
    96,
    41,
    59,
    10,
    9,
    125,
    10,
    125,
    10,
    99,
    111,
    110,
    115,
    116,
    32,
    36,
    65,
    112,
    112,
    32,
    61,
    32,
    95,
    95,
    97,
    112,
    112,
    40,
    112,
    114,
    111,
    99,
    101,
    115,
    115,
    46,
    101,
    110,
    118,
    46,
    87,
    73,
    78,
    71,
    95,
    84,
    65,
    82,
    71,
    69,
    84,
    41,
    59,
    10,
    10,
    99,
    108,
    97,
    115,
    115,
    32,
    77,
    121,
    65,
    112,
    112,
    32,
    101,
    120,
    116,
    101,
    110,
    100,
    115,
    32,
    36,
    65,
    112,
    112,
    32,
    123,
    10,
    99,
    111,
    110,
    115,
    116,
    114,
    117,
    99,
    116,
    111,
    114,
    40,
    41,
    32,
    123,
    10,
    32,
    32,
    115,
    117,
    112,
    101,
    114,
    40,
    123,
    32,
    111,
    117,
    116,
    100,
    105,
    114,
    58,
    32,
    36,
    111,
    117,
    116,
    100,
    105,
    114,
    44,
    32,
    110,
    97,
    109,
    101,
    58,
    32,
    34,
    101,
    120,
    112,
    114,
    101,
    115,
    115,
    105,
    111,
    110,
    115,
    95,
    115,
    116,
    114,
    105,
    110,
    103,
    95,
    105,
    110,
    116,
    101,
    114,
    112,
    111,
    108,
    97,
    116,
    105,
    111,
    110,
    34,
    32,
    125,
    41,
    59,
    10,
    32,
    32,
    10,
    32,
    32,
    108,
    101,
    116,
    32,
    114,
    101,
    103,
    117,
    108,
    97,
    114,
    95,
    115,
    116,
    114,
    105,
    110,
    103,
    32,
    61,
    32,
    34,
    115,
    116,
    114,
    92,
    110,
    92,
    34,
    34,
    59,
    10,
    32,
    32,
    108,
    101,
    116,
    32,
    101,
    109,
    112,
    116,
    121,
    95,
    115,
    116,
    114,
    105,
    110,
    103,
    32,
    61,
    32,
    34,
    34,
    59,
    10,
    32,
    32,
    108,
    101,
    116,
    32,
    110,
    117,
    109,
    98,
    101,
    114,
    32,
    61,
    32,
    49,
    59,
    10,
    32,
    32,
    108,
    101,
    116,
    32,
    99,
    111,
    111,
    108,
    95,
    115,
    116,
    114,
    105,
    110,
    103,
    32,
    61,
    32,
    96,
    99,
    111,
    111,
    108,
    32,
    92,
    34,
    92,
    36,
    123,
    36,
    123,
    114,
    101,
    103,
    117,
    108,
    97,
    114,
    95,
    115,
    116,
    114,
    105,
    110,
    103,
    125,
    125,
    92,
    34,
    32,
    116,
    101,
    115,
    116,
    96,
    59,
    10,
    32,
    32,
    108,
    101,
    116,
    32,
    114,
    101,
    97,
    108,
    108,
    121,
    95,
    99,
    111,
    111,
    108,
    95,
    115,
    116,
    114,
    105,
    110,
    103,
    32,
    61,
    32,
    96,
    36,
    123,
    110,
    117,
    109,
    98,
    101,
    114,
    125,
    36,
    123,
    110,
    117,
    109,
    98,
    101,
    114,
    125,
    36,
    123,
    101,
    109,
    112,
    116,
    121,
    95,
    115,
    116,
    114,
    105,
    110,
    103,
    125,
    36,
    123,
    101,
    109,
    112,
    116,
    121,
    95,
    115,
    116,
    114,
    105,
    110,
    103,
    125,
    92,
    110,
    36,
    123,
    99,
    111,
    111,
    108,
    95,
    115,
    116,
    114,
    105,
    110,
    103,
    125,
    36,
    123,
    99,
    111,
    111,
    108,
    95,
    115,
    116,
    114,
    105,
    110,
    103,
    125,
    92,
    110,
    92,
    36,
    123,
    101,
    109,
    112,
    116,
    121,
    95,
    115,
    116,
    114,
    105,
    110,
    103,
    125,
    36,
    123,
    34,
    115,
    116,
    114,
    105,
    110,
    103,
    45,
    105,
    110,
    45,
    115,
    116,
    114,
    105,
    110,
    103,
    34,
    125,
    33,
    96,
    59,
    10,
    125,
    10,
    125,
    10,
    110,
    101,
    119,
    32,
    77,
    121,
    65,
    112,
    112,
    40,
    41,
    46,
    115,
    121,
    110,
    116,
    104,
    40,
    41,
    59,
  ],
  "type": "Buffer",
}
`;

exports[`wing compile file_counter.w > cdk.tf.json 1`] = `
{
  "//": {
    "metadata": {
      "backend": "local",
      "stackName": "root",
      "version": "0.13.3",
    },
    "outputs": {},
  },
  "provider": {
    "aws": [
      {},
    ],
  },
  "resource": {
    "aws_dynamodb_table": {
      "root_cloudCounter_E0AC1263": {
        "//": {
          "metadata": {
            "path": "root/cloud.Counter/Default",
            "uniqueId": "root_cloudCounter_E0AC1263",
          },
        },
        "attribute": [
          {
            "name": "id",
            "type": "S",
          },
        ],
        "billing_mode": "PAY_PER_REQUEST",
        "hash_key": "id",
        "name": "wingsdk-counter-c866f225dbe83e49644c661486cb428e3749baa65c",
      },
    },
    "aws_iam_role": {
      "root_cloudQueue_OnMessage5cd9e35eaf590a95_IamRole_069C552D": {
        "//": {
          "metadata": {
            "path": "root/cloud.Queue/OnMessage-5cd9e35eaf590a95/IamRole",
            "uniqueId": "root_cloudQueue_OnMessage5cd9e35eaf590a95_IamRole_069C552D",
          },
        },
        "assume_role_policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":\\"sts:AssumeRole\\",\\"Principal\\":{\\"Service\\":\\"lambda.amazonaws.com\\"},\\"Effect\\":\\"Allow\\"}]}",
      },
    },
    "aws_iam_role_policy": {
      "root_cloudQueue_OnMessage5cd9e35eaf590a95_IamRolePolicy_B12C3DCB": {
        "//": {
          "metadata": {
            "path": "root/cloud.Queue/OnMessage-5cd9e35eaf590a95/IamRolePolicy",
            "uniqueId": "root_cloudQueue_OnMessage5cd9e35eaf590a95_IamRolePolicy_B12C3DCB",
          },
        },
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":[\\"s3:PutObject*\\",\\"s3:Abort*\\"],\\"Resource\\":[\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}\\",\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}/*\\"],\\"Effect\\":\\"Allow\\"},{\\"Action\\":[\\"s3:GetObject*\\",\\"s3:GetBucket*\\",\\"s3:List*\\"],\\"Resource\\":[\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}\\",\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}/*\\"],\\"Effect\\":\\"Allow\\"},{\\"Action\\":[\\"s3:GetObject*\\",\\"s3:GetBucket*\\",\\"s3:List*\\"],\\"Resource\\":[\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}\\",\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}/*\\"],\\"Effect\\":\\"Allow\\"},{\\"Action\\":[\\"dynamodb:UpdateItem\\"],\\"Resource\\":\\"\${aws_dynamodb_table.root_cloudCounter_E0AC1263.arn}\\",\\"Effect\\":\\"Allow\\"},{\\"Action\\":[\\"sqs:ReceiveMessage\\",\\"sqs:ChangeMessageVisibility\\",\\"sqs:GetQueueUrl\\",\\"sqs:DeleteMessage\\",\\"sqs:GetQueueAttributes\\"],\\"Resource\\":\\"\${aws_sqs_queue.root_cloudQueue_E3597F7A.arn}\\",\\"Effect\\":\\"Allow\\"}]}",
        "role": "\${aws_iam_role.root_cloudQueue_OnMessage5cd9e35eaf590a95_IamRole_069C552D.name}",
      },
    },
    "aws_iam_role_policy_attachment": {
      "root_cloudQueue_OnMessage5cd9e35eaf590a95_IamRolePolicyAttachment_F6C207F0": {
        "//": {
          "metadata": {
            "path": "root/cloud.Queue/OnMessage-5cd9e35eaf590a95/IamRolePolicyAttachment",
            "uniqueId": "root_cloudQueue_OnMessage5cd9e35eaf590a95_IamRolePolicyAttachment_F6C207F0",
          },
        },
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.root_cloudQueue_OnMessage5cd9e35eaf590a95_IamRole_069C552D.name}",
      },
    },
    "aws_lambda_event_source_mapping": {
      "root_cloudQueue_EventSourceMapping_A2041279": {
        "//": {
          "metadata": {
            "path": "root/cloud.Queue/EventSourceMapping",
            "uniqueId": "root_cloudQueue_EventSourceMapping_A2041279",
          },
        },
        "batch_size": 1,
        "event_source_arn": "\${aws_sqs_queue.root_cloudQueue_E3597F7A.arn}",
        "function_name": "\${aws_lambda_function.root_cloudQueue_OnMessage5cd9e35eaf590a95_CB3F958A.function_name}",
      },
    },
    "aws_lambda_function": {
      "root_cloudQueue_OnMessage5cd9e35eaf590a95_CB3F958A": {
        "//": {
          "metadata": {
            "path": "root/cloud.Queue/OnMessage-5cd9e35eaf590a95/Default",
            "uniqueId": "root_cloudQueue_OnMessage5cd9e35eaf590a95_CB3F958A",
          },
        },
        "environment": {
          "variables": {
            "BUCKET_NAME_d755b447": "\${aws_s3_bucket.root_cloudBucket_4F3C4F53.bucket}",
            "DYNAMODB_TABLE_NAME_49baa65c": "\${aws_dynamodb_table.root_cloudCounter_E0AC1263.name}",
            "WING_FUNCTION_NAME": "OnMessage-5cd9e35eaf590a95",
          },
        },
        "function_name": "OnMessage-5cd9e35eaf590a95",
        "handler": "index.handler",
        "role": "\${aws_iam_role.root_cloudQueue_OnMessage5cd9e35eaf590a95_IamRole_069C552D.arn}",
        "runtime": "nodejs16.x",
        "s3_bucket": "\${aws_s3_bucket.root_cloudQueue_OnMessage5cd9e35eaf590a95_Bucket_0EC130ED.bucket}",
        "s3_key": "\${aws_s3_object.root_cloudQueue_OnMessage5cd9e35eaf590a95_S3Object_346A6F4F.key}",
      },
    },
    "aws_s3_bucket": {
      "root_cloudBucket_4F3C4F53": {
        "//": {
          "metadata": {
            "path": "root/cloud.Bucket/Default",
            "uniqueId": "root_cloudBucket_4F3C4F53",
          },
        },
      },
      "root_cloudQueue_OnMessage5cd9e35eaf590a95_Bucket_0EC130ED": {
        "//": {
          "metadata": {
            "path": "root/cloud.Queue/OnMessage-5cd9e35eaf590a95/Bucket",
            "uniqueId": "root_cloudQueue_OnMessage5cd9e35eaf590a95_Bucket_0EC130ED",
          },
        },
      },
    },
    "aws_s3_bucket_public_access_block": {
      "root_cloudBucket_PublicAccessBlock_319C1C2E": {
        "//": {
          "metadata": {
            "path": "root/cloud.Bucket/PublicAccessBlock",
            "uniqueId": "root_cloudBucket_PublicAccessBlock_319C1C2E",
          },
        },
        "block_public_acls": true,
        "block_public_policy": true,
        "bucket": "\${aws_s3_bucket.root_cloudBucket_4F3C4F53.bucket}",
        "ignore_public_acls": true,
        "restrict_public_buckets": true,
      },
    },
    "aws_s3_bucket_server_side_encryption_configuration": {
      "root_cloudBucket_Encryption_8ED0CD9C": {
        "//": {
          "metadata": {
            "path": "root/cloud.Bucket/Encryption",
            "uniqueId": "root_cloudBucket_Encryption_8ED0CD9C",
          },
        },
        "bucket": "\${aws_s3_bucket.root_cloudBucket_4F3C4F53.bucket}",
        "rule": [
          {
            "apply_server_side_encryption_by_default": {
              "sse_algorithm": "AES256",
            },
          },
        ],
      },
    },
    "aws_s3_object": {
      "root_cloudQueue_OnMessage5cd9e35eaf590a95_S3Object_346A6F4F": {
        "//": {
          "metadata": {
            "path": "root/cloud.Queue/OnMessage-5cd9e35eaf590a95/S3Object",
            "uniqueId": "root_cloudQueue_OnMessage5cd9e35eaf590a95_S3Object_346A6F4F",
          },
        },
        "bucket": "\${aws_s3_bucket.root_cloudQueue_OnMessage5cd9e35eaf590a95_Bucket_0EC130ED.bucket}",
        "key": "<ASSET_KEY>",
      },
    },
  },
}
`;

exports[`wing compile file_counter.w > index.js 1`] = `
{
  "data": [
    97,
    115,
    121,
    110,
    99,
    32,
    102,
    117,
    110,
    99,
    116,
    105,
    111,
    110,
    32,
    36,
    112,
    114,
    111,
    99,
    40,
    123,
    32,
    98,
    117,
    99,
    107,
    101,
    116,
    44,
    32,
    99,
    111,
    117,
    110,
    116,
    101,
    114,
    32,
    125,
    44,
    32,
    98,
    111,
    100,
    121,
    41,
    32,
    123,
    10,
    32,
    32,
    108,
    101,
    116,
    32,
    110,
    101,
    120,
    116,
    32,
    61,
    32,
    99,
    111,
    117,
    110,
    116,
    101,
    114,
    46,
    105,
    110,
    99,
    40,
    41,
    59,
    10,
    32,
    32,
    108,
    101,
    116,
    32,
    107,
    101,
    121,
    32,
    61,
    32,
    96,
    109,
    121,
    102,
    105,
    108,
    101,
    45,
    36,
    123,
    34,
    104,
    105,
    34,
    125,
    46,
    116,
    120,
    116,
    96,
    59,
    10,
    32,
    32,
    98,
    117,
    99,
    107,
    101,
    116,
    46,
    112,
    117,
    116,
    40,
    107,
    101,
    121,
    44,
    98,
    111,
    100,
    121,
    41,
    59,
    10,
    125,
    59,
  ],
  "type": "Buffer",
}
`;

exports[`wing compile file_counter.w > manifest.json 1`] = `
{
  "stacks": {
    "root": {
      "annotations": [],
      "constructPath": "root",
      "dependencies": [],
      "name": "root",
      "synthesizedStackPath": "stacks/root/cdk.tf.json",
      "workingDirectory": "stacks/root",
    },
  },
  "version": "0.13.3",
}
`;

exports[`wing compile file_counter.w > preflight.js 1`] = `
{
  "data": [
    99,
    111,
    110,
    115,
    116,
    32,
    36,
    115,
    116,
    100,
    108,
    105,
    98,
    32,
    61,
    32,
    114,
    101,
    113,
    117,
    105,
    114,
    101,
    40,
    39,
    64,
    119,
    105,
    110,
    103,
    108,
    97,
    110,
    103,
    47,
    119,
    105,
    110,
    103,
    115,
    100,
    107,
    39,
    41,
    59,
    10,
    99,
    111,
    110,
    115,
    116,
    32,
    36,
    111,
    117,
    116,
    100,
    105,
    114,
    32,
    61,
    32,
    112,
    114,
    111,
    99,
    101,
    115,
    115,
    46,
    101,
    110,
    118,
    46,
    87,
    73,
    78,
    71,
    83,
    68,
    75,
    95,
    83,
    89,
    78,
    84,
    72,
    95,
    68,
    73,
    82,
    32,
    63,
    63,
    32,
    34,
    46,
    34,
    59,
    10,
    10,
    102,
    117,
    110,
    99,
    116,
    105,
    111,
    110,
    32,
    95,
    95,
    97,
    112,
    112,
    40,
    116,
    97,
    114,
    103,
    101,
    116,
    41,
    32,
    123,
    10,
    9,
    115,
    119,
    105,
    116,
    99,
    104,
    32,
    40,
    116,
    97,
    114,
    103,
    101,
    116,
    41,
    32,
    123,
    10,
    9,
    9,
    99,
    97,
    115,
    101,
    32,
    34,
    115,
    105,
    109,
    34,
    58,
    10,
    9,
    9,
    9,
    114,
    101,
    116,
    117,
    114,
    110,
    32,
    36,
    115,
    116,
    100,
    108,
    105,
    98,
    46,
    115,
    105,
    109,
    46,
    65,
    112,
    112,
    59,
    10,
    9,
    9,
    99,
    97,
    115,
    101,
    32,
    34,
    116,
    102,
    97,
    119,
    115,
    34,
    58,
    10,
    9,
    9,
    99,
    97,
    115,
    101,
    32,
    34,
    116,
    102,
    45,
    97,
    119,
    115,
    34,
    58,
    10,
    9,
    9,
    9,
    114,
    101,
    116,
    117,
    114,
    110,
    32,
    36,
    115,
    116,
    100,
    108,
    105,
    98,
    46,
    116,
    102,
    97,
    119,
    115,
    46,
    65,
    112,
    112,
    59,
    10,
    9,
    9,
    100,
    101,
    102,
    97,
    117,
    108,
    116,
    58,
    10,
    9,
    9,
    9,
    116,
    104,
    114,
    111,
    119,
    32,
    110,
    101,
    119,
    32,
    69,
    114,
    114,
    111,
    114,
    40,
    96,
    85,
    110,
    107,
    110,
    111,
    119,
    110,
    32,
    87,
    73,
    78,
    71,
    95,
    84,
    65,
    82,
    71,
    69,
    84,
    32,
    118,
    97,
    108,
    117,
    101,
    58,
    32,
    34,
    36,
    123,
    112,
    114,
    111,
    99,
    101,
    115,
    115,
    46,
    101,
    110,
    118,
    46,
    87,
    73,
    78,
    71,
    95,
    84,
    65,
    82,
    71,
    69,
    84,
    32,
    63,
    63,
    32,
    34,
    34,
    125,
    34,
    96,
    41,
    59,
    10,
    9,
    125,
    10,
    125,
    10,
    99,
    111,
    110,
    115,
    116,
    32,
    36,
    65,
    112,
    112,
    32,
    61,
    32,
    95,
    95,
    97,
    112,
    112,
    40,
    112,
    114,
    111,
    99,
    101,
    115,
    115,
    46,
    101,
    110,
    118,
    46,
    87,
    73,
    78,
    71,
    95,
    84,
    65,
    82,
    71,
    69,
    84,
    41,
    59,
    10,
    10,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    108,
    111,
    117,
    100,
    32,
    61,
    32,
    114,
    101,
    113,
    117,
    105,
    114,
    101,
    40,
    39,
    64,
    119,
    105,
    110,
    103,
    108,
    97,
    110,
    103,
    47,
    119,
    105,
    110,
    103,
    115,
    100,
    107,
    39,
    41,
    46,
    99,
    108,
    111,
    117,
    100,
    59,
    10,
    99,
    108,
    97,
    115,
    115,
    32,
    77,
    121,
    65,
    112,
    112,
    32,
    101,
    120,
    116,
    101,
    110,
    100,
    115,
    32,
    36,
    65,
    112,
    112,
    32,
    123,
    10,
    99,
    111,
    110,
    115,
    116,
    114,
    117,
    99,
    116,
    111,
    114,
    40,
    41,
    32,
    123,
    10,
    32,
    32,
    115,
    117,
    112,
    101,
    114,
    40,
    123,
    32,
    111,
    117,
    116,
    100,
    105,
    114,
    58,
    32,
    36,
    111,
    117,
    116,
    100,
    105,
    114,
    44,
    32,
    110,
    97,
    109,
    101,
    58,
    32,
    34,
    102,
    105,
    108,
    101,
    95,
    99,
    111,
    117,
    110,
    116,
    101,
    114,
    34,
    32,
    125,
    41,
    59,
    10,
    32,
    32,
    10,
    32,
    32,
    108,
    101,
    116,
    32,
    98,
    117,
    99,
    107,
    101,
    116,
    32,
    61,
    32,
    110,
    101,
    119,
    32,
    99,
    108,
    111,
    117,
    100,
    46,
    66,
    117,
    99,
    107,
    101,
    116,
    40,
    116,
    104,
    105,
    115,
    44,
    34,
    99,
    108,
    111,
    117,
    100,
    46,
    66,
    117,
    99,
    107,
    101,
    116,
    34,
    41,
    59,
    10,
    32,
    32,
    108,
    101,
    116,
    32,
    99,
    111,
    117,
    110,
    116,
    101,
    114,
    32,
    61,
    32,
    110,
    101,
    119,
    32,
    99,
    108,
    111,
    117,
    100,
    46,
    67,
    111,
    117,
    110,
    116,
    101,
    114,
    40,
    116,
    104,
    105,
    115,
    44,
    34,
    99,
    108,
    111,
    117,
    100,
    46,
    67,
    111,
    117,
    110,
    116,
    101,
    114,
    34,
    41,
    59,
    10,
    32,
    32,
    108,
    101,
    116,
    32,
    113,
    117,
    101,
    117,
    101,
    32,
    61,
    32,
    110,
    101,
    119,
    32,
    99,
    108,
    111,
    117,
    100,
    46,
    81,
    117,
    101,
    117,
    101,
    40,
    116,
    104,
    105,
    115,
    44,
    34,
    99,
    108,
    111,
    117,
    100,
    46,
    81,
    117,
    101,
    117,
    101,
    34,
    41,
    59,
    10,
    32,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    104,
    97,
    110,
    100,
    108,
    101,
    114,
    32,
    61,
    32,
    110,
    101,
    119,
    32,
    36,
    115,
    116,
    100,
    108,
    105,
    98,
    46,
    99,
    111,
    114,
    101,
    46,
    73,
    110,
    102,
    108,
    105,
    103,
    104,
    116,
    40,
    123,
    10,
    32,
    32,
    32,
    32,
    99,
    111,
    100,
    101,
    58,
    32,
    36,
    115,
    116,
    100,
    108,
    105,
    98,
    46,
    99,
    111,
    114,
    101,
    46,
    78,
    111,
    100,
    101,
    74,
    115,
    67,
    111,
    100,
    101,
    46,
    102,
    114,
    111,
    109,
    70,
    105,
    108,
    101,
    40,
    114,
    101,
    113,
    117,
    105,
    114,
    101,
    40,
    39,
    112,
    97,
    116,
    104,
    39,
    41,
    46,
    114,
    101,
    115,
    111,
    108,
    118,
    101,
    40,
    95,
    95,
    100,
    105,
    114,
    110,
    97,
    109,
    101,
    44,
    32,
    34,
    112,
    114,
    111,
    99,
    46,
    56,
    54,
    55,
    53,
    52,
    101,
    99,
    101,
    54,
    101,
    51,
    53,
    97,
    100,
    102,
    100,
    49,
    56,
    54,
    51,
    49,
    53,
    97,
    97,
    52,
    98,
    102,
    99,
    102,
    54,
    52,
    55,
    102,
    53,
    102,
    50,
    56,
    48,
    100,
    102,
    50,
    48,
    48,
    49,
    56,
    56,
    55,
    52,
    49,
    54,
    48,
    54,
    101,
    48,
    51,
    56,
    51,
    56,
    55,
    49,
    98,
    102,
    99,
    51,
    47,
    105,
    110,
    100,
    101,
    120,
    46,
    106,
    115,
    34,
    41,
    41,
    44,
    10,
    32,
    32,
    32,
    32,
    101,
    110,
    116,
    114,
    121,
    112,
    111,
    105,
    110,
    116,
    58,
    32,
    34,
    36,
    112,
    114,
    111,
    99,
    34,
    44,
    10,
    32,
    32,
    32,
    32,
    99,
    97,
    112,
    116,
    117,
    114,
    101,
    115,
    58,
    32,
    123,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    98,
    117,
    99,
    107,
    101,
    116,
    58,
    32,
    123,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    114,
    101,
    115,
    111,
    117,
    114,
    99,
    101,
    58,
    32,
    98,
    117,
    99,
    107,
    101,
    116,
    44,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    109,
    101,
    116,
    104,
    111,
    100,
    115,
    58,
    32,
    91,
    34,
    103,
    101,
    116,
    34,
    44,
    34,
    108,
    105,
    115,
    116,
    34,
    44,
    34,
    112,
    117,
    116,
    34,
    93,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    125,
    44,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    99,
    111,
    117,
    110,
    116,
    101,
    114,
    58,
    32,
    123,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    114,
    101,
    115,
    111,
    117,
    114,
    99,
    101,
    58,
    32,
    99,
    111,
    117,
    110,
    116,
    101,
    114,
    44,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    109,
    101,
    116,
    104,
    111,
    100,
    115,
    58,
    32,
    91,
    34,
    105,
    110,
    99,
    34,
    93,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    125,
    44,
    10,
    32,
    32,
    32,
    32,
    125,
    10,
    32,
    32,
    125,
    41,
    59,
    10,
    32,
    32,
    113,
    117,
    101,
    117,
    101,
    46,
    111,
    110,
    77,
    101,
    115,
    115,
    97,
    103,
    101,
    40,
    104,
    97,
    110,
    100,
    108,
    101,
    114,
    41,
    59,
    10,
    125,
    10,
    125,
    10,
    110,
    101,
    119,
    32,
    77,
    121,
    65,
    112,
    112,
    40,
    41,
    46,
    115,
    121,
    110,
    116,
    104,
    40,
    41,
    59,
  ],
  "type": "Buffer",
}
`;

exports[`wing compile forward_decl.w > cdk.tf.json 1`] = `
{
  "//": {
    "metadata": {
      "backend": "local",
      "stackName": "root",
      "version": "0.13.3",
    },
    "outputs": {},
  },
  "provider": {
    "aws": [
      {},
    ],
  },
}
`;

exports[`wing compile forward_decl.w > manifest.json 1`] = `
{
  "stacks": {
    "root": {
      "annotations": [],
      "constructPath": "root",
      "dependencies": [],
      "name": "root",
      "synthesizedStackPath": "stacks/root/cdk.tf.json",
      "workingDirectory": "stacks/root",
    },
  },
  "version": "0.13.3",
}
`;

exports[`wing compile forward_decl.w > preflight.js 1`] = `
{
  "data": [
    99,
    111,
    110,
    115,
    116,
    32,
    36,
    115,
    116,
    100,
    108,
    105,
    98,
    32,
    61,
    32,
    114,
    101,
    113,
    117,
    105,
    114,
    101,
    40,
    39,
    64,
    119,
    105,
    110,
    103,
    108,
    97,
    110,
    103,
    47,
    119,
    105,
    110,
    103,
    115,
    100,
    107,
    39,
    41,
    59,
    10,
    99,
    111,
    110,
    115,
    116,
    32,
    36,
    111,
    117,
    116,
    100,
    105,
    114,
    32,
    61,
    32,
    112,
    114,
    111,
    99,
    101,
    115,
    115,
    46,
    101,
    110,
    118,
    46,
    87,
    73,
    78,
    71,
    83,
    68,
    75,
    95,
    83,
    89,
    78,
    84,
    72,
    95,
    68,
    73,
    82,
    32,
    63,
    63,
    32,
    34,
    46,
    34,
    59,
    10,
    10,
    102,
    117,
    110,
    99,
    116,
    105,
    111,
    110,
    32,
    95,
    95,
    97,
    112,
    112,
    40,
    116,
    97,
    114,
    103,
    101,
    116,
    41,
    32,
    123,
    10,
    9,
    115,
    119,
    105,
    116,
    99,
    104,
    32,
    40,
    116,
    97,
    114,
    103,
    101,
    116,
    41,
    32,
    123,
    10,
    9,
    9,
    99,
    97,
    115,
    101,
    32,
    34,
    115,
    105,
    109,
    34,
    58,
    10,
    9,
    9,
    9,
    114,
    101,
    116,
    117,
    114,
    110,
    32,
    36,
    115,
    116,
    100,
    108,
    105,
    98,
    46,
    115,
    105,
    109,
    46,
    65,
    112,
    112,
    59,
    10,
    9,
    9,
    99,
    97,
    115,
    101,
    32,
    34,
    116,
    102,
    97,
    119,
    115,
    34,
    58,
    10,
    9,
    9,
    99,
    97,
    115,
    101,
    32,
    34,
    116,
    102,
    45,
    97,
    119,
    115,
    34,
    58,
    10,
    9,
    9,
    9,
    114,
    101,
    116,
    117,
    114,
    110,
    32,
    36,
    115,
    116,
    100,
    108,
    105,
    98,
    46,
    116,
    102,
    97,
    119,
    115,
    46,
    65,
    112,
    112,
    59,
    10,
    9,
    9,
    100,
    101,
    102,
    97,
    117,
    108,
    116,
    58,
    10,
    9,
    9,
    9,
    116,
    104,
    114,
    111,
    119,
    32,
    110,
    101,
    119,
    32,
    69,
    114,
    114,
    111,
    114,
    40,
    96,
    85,
    110,
    107,
    110,
    111,
    119,
    110,
    32,
    87,
    73,
    78,
    71,
    95,
    84,
    65,
    82,
    71,
    69,
    84,
    32,
    118,
    97,
    108,
    117,
    101,
    58,
    32,
    34,
    36,
    123,
    112,
    114,
    111,
    99,
    101,
    115,
    115,
    46,
    101,
    110,
    118,
    46,
    87,
    73,
    78,
    71,
    95,
    84,
    65,
    82,
    71,
    69,
    84,
    32,
    63,
    63,
    32,
    34,
    34,
    125,
    34,
    96,
    41,
    59,
    10,
    9,
    125,
    10,
    125,
    10,
    99,
    111,
    110,
    115,
    116,
    32,
    36,
    65,
    112,
    112,
    32,
    61,
    32,
    95,
    95,
    97,
    112,
    112,
    40,
    112,
    114,
    111,
    99,
    101,
    115,
    115,
    46,
    101,
    110,
    118,
    46,
    87,
    73,
    78,
    71,
    95,
    84,
    65,
    82,
    71,
    69,
    84,
    41,
    59,
    10,
    10,
    99,
    108,
    97,
    115,
    115,
    32,
    77,
    121,
    65,
    112,
    112,
    32,
    101,
    120,
    116,
    101,
    110,
    100,
    115,
    32,
    36,
    65,
    112,
    112,
    32,
    123,
    10,
    99,
    111,
    110,
    115,
    116,
    114,
    117,
    99,
    116,
    111,
    114,
    40,
    41,
    32,
    123,
    10,
    32,
    32,
    115,
    117,
    112,
    101,
    114,
    40,
    123,
    32,
    111,
    117,
    116,
    100,
    105,
    114,
    58,
    32,
    36,
    111,
    117,
    116,
    100,
    105,
    114,
    44,
    32,
    110,
    97,
    109,
    101,
    58,
    32,
    34,
    102,
    111,
    114,
    119,
    97,
    114,
    100,
    95,
    100,
    101,
    99,
    108,
    34,
    32,
    125,
    41,
    59,
    10,
    32,
    32,
    10,
    32,
    32,
    99,
    108,
    97,
    115,
    115,
    32,
    82,
    10,
    32,
    32,
    123,
    10,
    32,
    32,
    99,
    111,
    110,
    115,
    116,
    114,
    117,
    99,
    116,
    111,
    114,
    40,
    41,
    32,
    123,
    10,
    32,
    32,
    125,
    10,
    32,
    32,
    102,
    59,
    10,
    32,
    32,
    109,
    101,
    116,
    104,
    111,
    100,
    50,
    40,
    41,
    32,
    123,
    10,
    32,
    32,
    32,
    32,
    116,
    104,
    105,
    115,
    46,
    109,
    101,
    116,
    104,
    111,
    100,
    49,
    40,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    99,
    111,
    110,
    115,
    111,
    108,
    101,
    46,
    108,
    111,
    103,
    40,
    96,
    36,
    123,
    116,
    104,
    105,
    115,
    46,
    102,
    125,
    96,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    116,
    104,
    105,
    115,
    46,
    109,
    101,
    116,
    104,
    111,
    100,
    50,
    40,
    41,
    59,
    10,
    32,
    32,
    125,
    10,
    32,
    32,
    109,
    101,
    116,
    104,
    111,
    100,
    49,
    40,
    41,
    32,
    123,
    10,
    32,
    32,
    125,
    10,
    32,
    32,
    125,
    10,
    32,
    32,
    108,
    101,
    116,
    32,
    120,
    32,
    61,
    32,
    34,
    104,
    105,
    34,
    59,
    10,
    32,
    32,
    105,
    102,
    32,
    40,
    116,
    114,
    117,
    101,
    41,
    32,
    123,
    10,
    32,
    32,
    32,
    32,
    99,
    111,
    110,
    115,
    111,
    108,
    101,
    46,
    108,
    111,
    103,
    40,
    96,
    36,
    123,
    120,
    125,
    96,
    41,
    59,
    10,
    32,
    32,
    32,
    32,
    108,
    101,
    116,
    32,
    121,
    32,
    61,
    32,
    110,
    101,
    119,
    32,
    82,
    40,
    116,
    104,
    105,
    115,
    44,
    34,
    82,
    34,
    41,
    59,
    10,
    32,
    32,
    125,
    10,
    125,
    10,
    125,
    10,
    110,
    101,
    119,
    32,
    77,
    121,
    65,
    112,
    112,
    40,
    41,
    46,
    115,
    121,
    110,
    116,
    104,
    40,
    41,
    59,
  ],
  "type": "Buffer",
}
`;

exports[`wing compile hello.w > cdk.tf.json 1`] = `
{
  "//": {
    "metadata": {
      "backend": "local",
      "stackName": "root",
      "version": "0.13.3",
    },
    "outputs": {},
  },
  "provider": {
    "aws": [
      {},
    ],
  },
  "resource": {
    "aws_iam_role": {
      "root_cloudQueue_OnMessagef2236b9947ff57cf_IamRole_1BC2CA4B": {
        "//": {
          "metadata": {
            "path": "root/cloud.Queue/OnMessage-f2236b9947ff57cf/IamRole",
            "uniqueId": "root_cloudQueue_OnMessagef2236b9947ff57cf_IamRole_1BC2CA4B",
          },
        },
        "assume_role_policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":\\"sts:AssumeRole\\",\\"Principal\\":{\\"Service\\":\\"lambda.amazonaws.com\\"},\\"Effect\\":\\"Allow\\"}]}",
      },
    },
    "aws_iam_role_policy": {
      "root_cloudQueue_OnMessagef2236b9947ff57cf_IamRolePolicy_53F6F7E2": {
        "//": {
          "metadata": {
            "path": "root/cloud.Queue/OnMessage-f2236b9947ff57cf/IamRolePolicy",
            "uniqueId": "root_cloudQueue_OnMessagef2236b9947ff57cf_IamRolePolicy_53F6F7E2",
          },
        },
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":[\\"s3:PutObject*\\",\\"s3:Abort*\\"],\\"Resource\\":[\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}\\",\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}/*\\"],\\"Effect\\":\\"Allow\\"},{\\"Action\\":[\\"s3:GetObject*\\",\\"s3:GetBucket*\\",\\"s3:List*\\"],\\"Resource\\":[\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}\\",\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}/*\\"],\\"Effect\\":\\"Allow\\"},{\\"Action\\":[\\"s3:GetObject*\\",\\"s3:GetBucket*\\",\\"s3:List*\\"],\\"Resource\\":[\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}\\",\\"\${aws_s3_bucket.root_cloudBucket_4F3C4F53.arn}/*\\"],\\"Effect\\":\\"Allow\\"},{\\"Action\\":[\\"sqs:ReceiveMessage\\",\\"sqs:ChangeMessageVisibility\\",\\"sqs:GetQueueUrl\\",\\"sqs:DeleteMessage\\",\\"sqs:GetQueueAttributes\\"],\\"Resource\\":\\"\${aws_sqs_queue.root_cloudQueue_E3597F7A.arn}\\",\\"Effect\\":\\"Allow\\"}]}",
        "role": "\${aws_iam_role.root_cloudQueue_OnMessagef2236b9947ff57cf_IamRole_1BC2CA4B.name}",
      },
    },
    "aws_iam_role_policy_attachment": {
      "root_cloudQueue_OnMessagef2236b9947ff57cf_IamRolePolicyAttachment_B18EEFFB": {
        "//": {
          "metadata": {
            "path": "root/cloud.Queue/OnMessage-f2236b9947ff57cf/IamRolePolicyAttachment",
            "uniqueId": "root_cloudQueue_OnMessagef2236b9947ff57cf_IamRolePolicyAttachment_B18EEFFB",
          },
        },
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.root_cloudQueue_OnMessagef2236b9947ff57cf_IamRole_1BC2CA4B.name}",
      },
    },
    "aws_lambda_event_source_mapping": {
      "root_cloudQueue_EventSourceMapping_A2041279": {
        "//": {
          "metadata": {
            "path": "root/cloud.Queue/EventSourceMapping",
            "uniqueId": "root_cloudQueue_EventSourceMapping_A2041279",
          },
        },
        "batch_size": 1,
        "event_source_arn": "\${aws_sqs_queue.root_cloudQueue_E3597F7A.arn}",
        "function_name": "\${aws_lambda_function.root_cloudQueue_OnMessagef2236b9947ff57cf_6BC03D57.function_name}",
      },
    },
    "aws_lambda_function": {
      "root_cloudQueue_OnMessagef2236b9947ff57cf_6BC03D57": {
        "//": {
          "metadata": {
            "path": "root/cloud.Queue/OnMessage-f2236b9947ff57cf/Default",
            "uniqueId": "root_cloudQueue_OnMessagef2236b9947ff57cf_6BC03D57",
          },
        },
        "environment": {
          "variables": {
            "BUCKET_NAME_d755b447": "\${aws_s3_bucket.root_cloudBucket_4F3C4F53.bucket}",
            "WING_FUNCTION_NAME": "OnMessage-f2236b9947ff57cf",
          },
        },
        "function_name": "OnMessage-f2236b9947ff57cf",
        "handler": "index.handler",
        "role": "\${aws_iam_role.root_cloudQueue_OnMessagef2236b9947ff57cf_IamRole_1BC2CA4B.arn}",
        "runtime": "nodejs16.x",
        "s3_bucket": "\${aws_s3_bucket.root_cloudQueue_OnMessagef2236b9947ff57cf_Bucket_ABACB2AB.bucket}",
        "s3_key": "\${aws_s3_object.root_cloudQueue_OnMessagef2236b9947ff57cf_S3Object_AF8A5823.key}",
      },
    },
    "aws_s3_bucket": {
      "root_cloudBucket_4F3C4F53": {
        "//": {
          "metadata": {
            "path": "root/cloud.Bucket/Default",
            "uniqueId": "root_cloudBucket_4F3C4F53",
          },
        },
      },
      "root_cloudQueue_OnMessagef2236b9947ff57cf_Bucket_ABACB2AB": {
        "//": {
          "metadata": {
            "path": "root/cloud.Queue/OnMessage-f2236b9947ff57cf/Bucket",
            "uniqueId": "root_cloudQueue_OnMessagef2236b9947ff57cf_Bucket_ABACB2AB",
          },
        },
      },
    },
    "aws_s3_bucket_public_access_block": {
      "root_cloudBucket_PublicAccessBlock_319C1C2E": {
        "//": {
          "metadata": {
            "path": "root/cloud.Bucket/PublicAccessBlock",
            "uniqueId": "root_cloudBucket_PublicAccessBlock_319C1C2E",
          },
        },
        "block_public_acls": true,
        "block_public_policy": true,
        "bucket": "\${aws_s3_bucket.root_cloudBucket_4F3C4F53.bucket}",
        "ignore_public_acls": true,
        "restrict_public_buckets": true,
      },
    },
    "aws_s3_bucket_server_side_encryption_configuration": {
      "root_cloudBucket_Encryption_8ED0CD9C": {
        "//": {
          "metadata": {
            "path": "root/cloud.Bucket/Encryption",
            "uniqueId": "root_cloudBucket_Encryption_8ED0CD9C",
          },
        },
        "bucket": "\${aws_s3_bucket.root_cloudBucket_4F3C4F53.bucket}",
        "rule": [
          {
            "apply_server_side_encryption_by_default": {
              "sse_algorithm": "AES256",
            },
          },
        ],
      },
    },
    "aws_s3_object": {
      "root_cloudQueue_OnMessagef2236b9947ff57cf_S3Object_AF8A5823": {
        "//": {
          "metadata": {
            "path": "root/cloud.Queue/OnMessage-f2236b9947ff57cf/S3Object",
            "uniqueId": "root_cloudQueue_OnMessagef2236b9947ff57cf_S3Object_AF8A5823",
          },
        },
        "bucket": "\${aws_s3_bucket.root_cloudQueue_OnMessagef2236b9947ff57cf_Bucket_ABACB2AB.bucket}",
        "key": "<ASSET_KEY>",
      },
    },
  },
}
`;

exports[`wing compile hello.w > index.js 1`] = `
{
  "data": [
    97,
    115,
    121,
    110,
    99,
    32,
    102,
    117,
    110,
    99,
    116,
    105,
    111,
    110,
    32,
    36,
    112,
    114,
    111,
    99,
    40,
    123,
    32,
    98,
    117,
    99,
    107,
    101,
    116,
    32,
    125,
    44,
    32,
    109,
    101,
    115,
    115,
    97,
    103,
    101,
    41,
    32,
    123,
    10,
    32,
    32,
    98,
    117,
    99,
    107,
    101,
    116,
    46,
    112,
    117,
    116,
    40,
    34,
    104,
    101,
    108,
    108,
    111,
    46,
    116,
    120,
    116,
    34,
    44,
    96,
    72,
    101,
    108,
    108,
    111,
    44,
    32,
    36,
    123,
    109,
    101,
    115,
    115,
    97,
    103,
    101,
    125,
    33,
    96,
    41,
    59,
    10,
    32,
    32,
    114,
    101,
    116,
    117,
    114,
    110,
    32,
    109,
    101,
    115,
    115,
    97,
    103,
    101,
    59,
    10,
    125,
    59,
  ],
  "type": "Buffer",
}
`;

exports[`wing compile hello.w > manifest.json 1`] = `
{
  "stacks": {
    "root": {
      "annotations": [],
      "constructPath": "root",
      "dependencies": [],
      "name": "root",
      "synthesizedStackPath": "stacks/root/cdk.tf.json",
      "workingDirectory": "stacks/root",
    },
  },
  "version": "0.13.3",
}
`;

exports[`wing compile hello.w > preflight.js 1`] = `
{
  "data": [
    99,
    111,
    110,
    115,
    116,
    32,
    36,
    115,
    116,
    100,
    108,
    105,
    98,
    32,
    61,
    32,
    114,
    101,
    113,
    117,
    105,
    114,
    101,
    40,
    39,
    64,
    119,
    105,
    110,
    103,
    108,
    97,
    110,
    103,
    47,
    119,
    105,
    110,
    103,
    115,
    100,
    107,
    39,
    41,
    59,
    10,
    99,
    111,
    110,
    115,
    116,
    32,
    36,
    111,
    117,
    116,
    100,
    105,
    114,
    32,
    61,
    32,
    112,
    114,
    111,
    99,
    101,
    115,
    115,
    46,
    101,
    110,
    118,
    46,
    87,
    73,
    78,
    71,
    83,
    68,
    75,
    95,
    83,
    89,
    78,
    84,
    72,
    95,
    68,
    73,
    82,
    32,
    63,
    63,
    32,
    34,
    46,
    34,
    59,
    10,
    10,
    102,
    117,
    110,
    99,
    116,
    105,
    111,
    110,
    32,
    95,
    95,
    97,
    112,
    112,
    40,
    116,
    97,
    114,
    103,
    101,
    116,
    41,
    32,
    123,
    10,
    9,
    115,
    119,
    105,
    116,
    99,
    104,
    32,
    40,
    116,
    97,
    114,
    103,
    101,
    116,
    41,
    32,
    123,
    10,
    9,
    9,
    99,
    97,
    115,
    101,
    32,
    34,
    115,
    105,
    109,
    34,
    58,
    10,
    9,
    9,
    9,
    114,
    101,
    116,
    117,
    114,
    110,
    32,
    36,
    115,
    116,
    100,
    108,
    105,
    98,
    46,
    115,
    105,
    109,
    46,
    65,
    112,
    112,
    59,
    10,
    9,
    9,
    99,
    97,
    115,
    101,
    32,
    34,
    116,
    102,
    97,
    119,
    115,
    34,
    58,
    10,
    9,
    9,
    99,
    97,
    115,
    101,
    32,
    34,
    116,
    102,
    45,
    97,
    119,
    115,
    34,
    58,
    10,
    9,
    9,
    9,
    114,
    101,
    116,
    117,
    114,
    110,
    32,
    36,
    115,
    116,
    100,
    108,
    105,
    98,
    46,
    116,
    102,
    97,
    119,
    115,
    46,
    65,
    112,
    112,
    59,
    10,
    9,
    9,
    100,
    101,
    102,
    97,
    117,
    108,
    116,
    58,
    10,
    9,
    9,
    9,
    116,
    104,
    114,
    111,
    119,
    32,
    110,
    101,
    119,
    32,
    69,
    114,
    114,
    111,
    114,
    40,
    96,
    85,
    110,
    107,
    110,
    111,
    119,
    110,
    32,
    87,
    73,
    78,
    71,
    95,
    84,
    65,
    82,
    71,
    69,
    84,
    32,
    118,
    97,
    108,
    117,
    101,
    58,
    32,
    34,
    36,
    123,
    112,
    114,
    111,
    99,
    101,
    115,
    115,
    46,
    101,
    110,
    118,
    46,
    87,
    73,
    78,
    71,
    95,
    84,
    65,
    82,
    71,
    69,
    84,
    32,
    63,
    63,
    32,
    34,
    34,
    125,
    34,
    96,
    41,
    59,
    10,
    9,
    125,
    10,
    125,
    10,
    99,
    111,
    110,
    115,
    116,
    32,
    36,
    65,
    112,
    112,
    32,
    61,
    32,
    95,
    95,
    97,
    112,
    112,
    40,
    112,
    114,
    111,
    99,
    101,
    115,
    115,
    46,
    101,
    110,
    118,
    46,
    87,
    73,
    78,
    71,
    95,
    84,
    65,
    82,
    71,
    69,
    84,
    41,
    59,
    10,
    10,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    108,
    111,
    117,
    100,
    32,
    61,
    32,
    114,
    101,
    113,
    117,
    105,
    114,
    101,
    40,
    39,
    64,
    119,
    105,
    110,
    103,
    108,
    97,
    110,
    103,
    47,
    119,
    105,
    110,
    103,
    115,
    100,
    107,
    39,
    41,
    46,
    99,
    108,
    111,
    117,
    100,
    59,
    10,
    99,
    108,
    97,
    115,
    115,
    32,
    77,
    121,
    65,
    112,
    112,
    32,
    101,
    120,
    116,
    101,
    110,
    100,
    115,
    32,
    36,
    65,
    112,
    112,
    32,
    123,
    10,
    99,
    111,
    110,
    115,
    116,
    114,
    117,
    99,
    116,
    111,
    114,
    40,
    41,
    32,
    123,
    10,
    32,
    32,
    115,
    117,
    112,
    101,
    114,
    40,
    123,
    32,
    111,
    117,
    116,
    100,
    105,
    114,
    58,
    32,
    36,
    111,
    117,
    116,
    100,
    105,
    114,
    44,
    32,
    110,
    97,
    109,
    101,
    58,
    32,
    34,
    104,
    101,
    108,
    108,
    111,
    34,
    32,
    125,
    41,
    59,
    10,
    32,
    32,
    10,
    32,
    32,
    108,
    101,
    116,
    32,
    98,
    117,
    99,
    107,
    101,
    116,
    32,
    61,
    32,
    110,
    101,
    119,
    32,
    99,
    108,
    111,
    117,
    100,
    46,
    66,
    117,
    99,
    107,
    101,
    116,
    40,
    116,
    104,
    105,
    115,
    44,
    34,
    99,
    108,
    111,
    117,
    100,
    46,
    66,
    117,
    99,
    107,
    101,
    116,
    34,
    41,
    59,
    10,
    32,
    32,
    108,
    101,
    116,
    32,
    113,
    117,
    101,
    117,
    101,
    32,
    61,
    32,
    110,
    101,
    119,
    32,
    99,
    108,
    111,
    117,
    100,
    46,
    81,
    117,
    101,
    117,
    101,
    40,
    116,
    104,
    105,
    115,
    44,
    34,
    99,
    108,
    111,
    117,
    100,
    46,
    81,
    117,
    101,
    117,
    101,
    34,
    41,
    59,
    10,
    32,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    104,
    97,
    110,
    100,
    108,
    101,
    114,
    32,
    61,
    32,
    110,
    101,
    119,
    32,
    36,
    115,
    116,
    100,
    108,
    105,
    98,
    46,
    99,
    111,
    114,
    101,
    46,
    73,
    110,
    102,
    108,
    105,
    103,
    104,
    116,
    40,
    123,
    10,
    32,
    32,
    32,
    32,
    99,
    111,
    100,
    101,
    58,
    32,
    36,
    115,
    116,
    100,
    108,
    105,
    98,
    46,
    99,
    111,
    114,
    101,
    46,
    78,
    111,
    100,
    101,
    74,
    115,
    67,
    111,
    100,
    101,
    46,
    102,
    114,
    111,
    109,
    70,
    105,
    108,
    101,
    40,
    114,
    101,
    113,
    117,
    105,
    114,
    101,
    40,
    39,
    112,
    97,
    116,
    104,
    39,
    41,
    46,
    114,
    101,
    115,
    111,
    108,
    118,
    101,
    40,
    95,
    95,
    100,
    105,
    114,
    110,
    97,
    109,
    101,
    44,
    32,
    34,
    112,
    114,
    111,
    99,
    46,
    99,
    101,
    102,
    100,
    54,
    53,
    52,
    100,
    101,
    51,
    48,
    54,
    55,
    51,
    102,
    102,
    52,
    101,
    101,
    54,
    51,
    99,
    49,
    53,
    56,
    54,
    97,
    51,
    97,
    99,
    48,
    101,
    52,
    98,
    54,
    57,
    50,
    49,
    55,
    102,
    57,
    56,
    55,
    99,
    48,
    55,
    102,
    57,
    50,
    55,
    52,
    101,
    99,
    98,
    49,
    99,
    55,
    98,
    55,
    101,
    50,
    48,
    54,
    54,
    47,
    105,
    110,
    100,
    101,
    120,
    46,
    106,
    115,
    34,
    41,
    41,
    44,
    10,
    32,
    32,
    32,
    32,
    101,
    110,
    116,
    114,
    121,
    112,
    111,
    105,
    110,
    116,
    58,
    32,
    34,
    36,
    112,
    114,
    111,
    99,
    34,
    44,
    10,
    32,
    32,
    32,
    32,
    99,
    97,
    112,
    116,
    117,
    114,
    101,
    115,
    58,
    32,
    123,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    98,
    117,
    99,
    107,
    101,
    116,
    58,
    32,
    123,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    114,
    101,
    115,
    111,
    117,
    114,
    99,
    101,
    58,
    32,
    98,
    117,
    99,
    107,
    101,
    116,
    44,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    109,
    101,
    116,
    104,
    111,
    100,
    115,
    58,
    32,
    91,
    34,
    103,
    101,
    116,
    34,
    44,
    34,
    108,
    105,
    115,
    116,
    34,
    44,
    34,
    112,
    117,
    116,
    34,
    93,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    125,
    44,
    10,
    32,
    32,
    32,
    32,
    125,
    10,
    32,
    32,
    125,
    41,
    59,
    10,
    32,
    32,
    113,
    117,
    101,
    117,
    101,
    46,
    111,
    110,
    77,
    101,
    115,
    115,
    97,
    103,
    101,
    40,
    104,
    97,
    110,
    100,
    108,
    101,
    114,
    41,
    59,
    10,
    125,
    10,
    125,
    10,
    110,
    101,
    119,
    32,
    77,
    121,
    65,
    112,
    112,
    40,
    41,
    46,
    115,
    121,
    110,
    116,
    104,
    40,
    41,
    59,
  ],
  "type": "Buffer",
}
`;

exports[`wing compile print.w > cdk.tf.json 1`] = `
{
  "//": {
    "metadata": {
      "backend": "local",
      "stackName": "root",
      "version": "0.13.3",
    },
    "outputs": {},
  },
  "provider": {
    "aws": [
      {},
    ],
  },
  "resource": {
    "aws_iam_role": {
      "root_cloudFunction_IamRole_DAEC3578": {
        "//": {
          "metadata": {
            "path": "root/cloud.Function/IamRole",
            "uniqueId": "root_cloudFunction_IamRole_DAEC3578",
          },
        },
        "assume_role_policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":\\"sts:AssumeRole\\",\\"Principal\\":{\\"Service\\":\\"lambda.amazonaws.com\\"},\\"Effect\\":\\"Allow\\"}]}",
      },
    },
    "aws_iam_role_policy": {
      "root_cloudFunction_IamRolePolicy_AAE6C0C0": {
        "//": {
          "metadata": {
            "path": "root/cloud.Function/IamRolePolicy",
            "uniqueId": "root_cloudFunction_IamRolePolicy_AAE6C0C0",
          },
        },
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Effect\\":\\"Allow\\",\\"Action\\":\\"none:null\\",\\"Resource\\":\\"*\\"}]}",
        "role": "\${aws_iam_role.root_cloudFunction_IamRole_DAEC3578.name}",
      },
    },
    "aws_iam_role_policy_attachment": {
      "root_cloudFunction_IamRolePolicyAttachment_FC3D9E7C": {
        "//": {
          "metadata": {
            "path": "root/cloud.Function/IamRolePolicyAttachment",
            "uniqueId": "root_cloudFunction_IamRolePolicyAttachment_FC3D9E7C",
          },
        },
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.root_cloudFunction_IamRole_DAEC3578.name}",
      },
    },
    "aws_lambda_function": {
      "root_cloudFunction_6A57BA0A": {
        "//": {
          "metadata": {
            "path": "root/cloud.Function/Default",
            "uniqueId": "root_cloudFunction_6A57BA0A",
          },
        },
        "environment": {
          "variables": {
            "WING_FUNCTION_NAME": "cloud.Function",
          },
        },
        "function_name": "cloud.Function",
        "handler": "index.handler",
        "role": "\${aws_iam_role.root_cloudFunction_IamRole_DAEC3578.arn}",
        "runtime": "nodejs16.x",
        "s3_bucket": "\${aws_s3_bucket.root_cloudFunction_Bucket_245CAEB7.bucket}",
        "s3_key": "\${aws_s3_object.root_cloudFunction_S3Object_C8435368.key}",
      },
    },
    "aws_s3_bucket": {
      "root_cloudBucket_4F3C4F53": {
        "//": {
          "metadata": {
            "path": "root/cloud.Bucket/Default",
            "uniqueId": "root_cloudBucket_4F3C4F53",
          },
        },
      },
      "root_cloudFunction_Bucket_245CAEB7": {
        "//": {
          "metadata": {
            "path": "root/cloud.Function/Bucket",
            "uniqueId": "root_cloudFunction_Bucket_245CAEB7",
          },
        },
      },
    },
    "aws_s3_bucket_public_access_block": {
      "root_cloudBucket_PublicAccessBlock_319C1C2E": {
        "//": {
          "metadata": {
            "path": "root/cloud.Bucket/PublicAccessBlock",
            "uniqueId": "root_cloudBucket_PublicAccessBlock_319C1C2E",
          },
        },
        "block_public_acls": true,
        "block_public_policy": true,
        "bucket": "\${aws_s3_bucket.root_cloudBucket_4F3C4F53.bucket}",
        "ignore_public_acls": true,
        "restrict_public_buckets": true,
      },
    },
    "aws_s3_bucket_server_side_encryption_configuration": {
      "root_cloudBucket_Encryption_8ED0CD9C": {
        "//": {
          "metadata": {
            "path": "root/cloud.Bucket/Encryption",
            "uniqueId": "root_cloudBucket_Encryption_8ED0CD9C",
          },
        },
        "bucket": "\${aws_s3_bucket.root_cloudBucket_4F3C4F53.bucket}",
        "rule": [
          {
            "apply_server_side_encryption_by_default": {
              "sse_algorithm": "AES256",
            },
          },
        ],
      },
    },
    "aws_s3_object": {
      "root_cloudFunction_S3Object_C8435368": {
        "//": {
          "metadata": {
            "path": "root/cloud.Function/S3Object",
            "uniqueId": "root_cloudFunction_S3Object_C8435368",
          },
        },
        "bucket": "\${aws_s3_bucket.root_cloudFunction_Bucket_245CAEB7.bucket}",
        "key": "<ASSET_KEY>",
      },
    },
  },
}
`;

exports[`wing compile print.w > index.js 1`] = `
{
  "data": [
    97,
    115,
    121,
    110,
    99,
    32,
    102,
    117,
    110,
    99,
    116,
    105,
    111,
    110,
    32,
    36,
    112,
    114,
    111,
    99,
    40,
    123,
    32,
    32,
    125,
    44,
    32,
    101,
    118,
    101,
    110,
    116,
    41,
    32,
    123,
    10,
    32,
    32,
    99,
    111,
    110,
    115,
    111,
    108,
    101,
    46,
    108,
    111,
    103,
    40,
    101,
    118,
    101,
    110,
    116,
    41,
    59,
    10,
    125,
    59,
  ],
  "type": "Buffer",
}
`;

exports[`wing compile print.w > manifest.json 1`] = `
{
  "stacks": {
    "root": {
      "annotations": [],
      "constructPath": "root",
      "dependencies": [],
      "name": "root",
      "synthesizedStackPath": "stacks/root/cdk.tf.json",
      "workingDirectory": "stacks/root",
    },
  },
  "version": "0.13.3",
}
`;

exports[`wing compile print.w > preflight.js 1`] = `
{
  "data": [
    99,
    111,
    110,
    115,
    116,
    32,
    36,
    115,
    116,
    100,
    108,
    105,
    98,
    32,
    61,
    32,
    114,
    101,
    113,
    117,
    105,
    114,
    101,
    40,
    39,
    64,
    119,
    105,
    110,
    103,
    108,
    97,
    110,
    103,
    47,
    119,
    105,
    110,
    103,
    115,
    100,
    107,
    39,
    41,
    59,
    10,
    99,
    111,
    110,
    115,
    116,
    32,
    36,
    111,
    117,
    116,
    100,
    105,
    114,
    32,
    61,
    32,
    112,
    114,
    111,
    99,
    101,
    115,
    115,
    46,
    101,
    110,
    118,
    46,
    87,
    73,
    78,
    71,
    83,
    68,
    75,
    95,
    83,
    89,
    78,
    84,
    72,
    95,
    68,
    73,
    82,
    32,
    63,
    63,
    32,
    34,
    46,
    34,
    59,
    10,
    10,
    102,
    117,
    110,
    99,
    116,
    105,
    111,
    110,
    32,
    95,
    95,
    97,
    112,
    112,
    40,
    116,
    97,
    114,
    103,
    101,
    116,
    41,
    32,
    123,
    10,
    9,
    115,
    119,
    105,
    116,
    99,
    104,
    32,
    40,
    116,
    97,
    114,
    103,
    101,
    116,
    41,
    32,
    123,
    10,
    9,
    9,
    99,
    97,
    115,
    101,
    32,
    34,
    115,
    105,
    109,
    34,
    58,
    10,
    9,
    9,
    9,
    114,
    101,
    116,
    117,
    114,
    110,
    32,
    36,
    115,
    116,
    100,
    108,
    105,
    98,
    46,
    115,
    105,
    109,
    46,
    65,
    112,
    112,
    59,
    10,
    9,
    9,
    99,
    97,
    115,
    101,
    32,
    34,
    116,
    102,
    97,
    119,
    115,
    34,
    58,
    10,
    9,
    9,
    99,
    97,
    115,
    101,
    32,
    34,
    116,
    102,
    45,
    97,
    119,
    115,
    34,
    58,
    10,
    9,
    9,
    9,
    114,
    101,
    116,
    117,
    114,
    110,
    32,
    36,
    115,
    116,
    100,
    108,
    105,
    98,
    46,
    116,
    102,
    97,
    119,
    115,
    46,
    65,
    112,
    112,
    59,
    10,
    9,
    9,
    100,
    101,
    102,
    97,
    117,
    108,
    116,
    58,
    10,
    9,
    9,
    9,
    116,
    104,
    114,
    111,
    119,
    32,
    110,
    101,
    119,
    32,
    69,
    114,
    114,
    111,
    114,
    40,
    96,
    85,
    110,
    107,
    110,
    111,
    119,
    110,
    32,
    87,
    73,
    78,
    71,
    95,
    84,
    65,
    82,
    71,
    69,
    84,
    32,
    118,
    97,
    108,
    117,
    101,
    58,
    32,
    34,
    36,
    123,
    112,
    114,
    111,
    99,
    101,
    115,
    115,
    46,
    101,
    110,
    118,
    46,
    87,
    73,
    78,
    71,
    95,
    84,
    65,
    82,
    71,
    69,
    84,
    32,
    63,
    63,
    32,
    34,
    34,
    125,
    34,
    96,
    41,
    59,
    10,
    9,
    125,
    10,
    125,
    10,
    99,
    111,
    110,
    115,
    116,
    32,
    36,
    65,
    112,
    112,
    32,
    61,
    32,
    95,
    95,
    97,
    112,
    112,
    40,
    112,
    114,
    111,
    99,
    101,
    115,
    115,
    46,
    101,
    110,
    118,
    46,
    87,
    73,
    78,
    71,
    95,
    84,
    65,
    82,
    71,
    69,
    84,
    41,
    59,
    10,
    10,
    99,
    111,
    110,
    115,
    116,
    32,
    99,
    108,
    111,
    117,
    100,
    32,
    61,
    32,
    114,
    101,
    113,
    117,
    105,
    114,
    101,
    40,
    39,
    64,
    119,
    105,
    110,
    103,
    108,
    97,
    110,
    103,
    47,
    119,
    105,
    110,
    103,
    115,
    100,
    107,
    39,
    41,
    46,
    99,
    108,
    111,
    117,
    100,
    59,
    10,
    99,
    108,
    97,
    115,
    115,
    32,
    77,
    121,
    65,
    112,
    112,
    32,
    101,
    120,
    116,
    101,
    110,
    100,
    115,
    32,
    36,
    65,
    112,
    112,
    32,
    123,
    10,
    99,
    111,
    110,
    115,
    116,
    114,
    117,
    99,
    116,
    111,
    114,
    40,
    41,
    32,
    123,
    10,
    32,
    32,
    115,
    117,
    112,
    101,
    114,
    40,
    123,
    32,
    111,
    117,
    116,
    100,
    105,
    114,
    58,
    32,
    36,
    111,
    117,
    116,
    100,
    105,
    114,
    44,
    32,
    110,
    97,
    109,
    101,
    58,
    32,
    34,
    112,
    114,
    105,
    110,
    116,
    34,
    32,
    125,
    41,
    59,
    10,
    32,
    32,
    10,
    32,
    32,
    108,
    101,
    116,
    32,
    98,
    117,
    99,
    107,
    101,
    116,
    49,
    32,
    61,
    32,
    110,
    101,
    119,
    32,
    99,
    108,
    111,
    117,
    100,
    46,
    66,
    117,
    99,
    107,
    101,
    116,
    40,
    116,
    104,
    105,
    115,
    44,
    34,
    99,
    108,
    111,
    117,
    100,
    46,
    66,
    117,
    99,
    107,
    101,
    116,
    34,
    41,
    59,
    10,
    32,
    32,
    99,
    111,
    110,
    115,
    111,
    108,
    101,
    46,
    108,
    111,
    103,
    40,
    34,
    72,
    101,
    108,
    108,
    111,
    32,
    119,
    111,
    114,
    108,
    100,
    33,
    34,
    41,
    59,
    10,
    32,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    104,
    97,
    110,
    100,
    108,
    101,
    114,
    32,
    61,
    32,
    110,
    101,
    119,
    32,
    36,
    115,
    116,
    100,
    108,
    105,
    98,
    46,
    99,
    111,
    114,
    101,
    46,
    73,
    110,
    102,
    108,
    105,
    103,
    104,
    116,
    40,
    123,
    10,
    32,
    32,
    32,
    32,
    99,
    111,
    100,
    101,
    58,
    32,
    36,
    115,
    116,
    100,
    108,
    105,
    98,
    46,
    99,
    111,
    114,
    101,
    46,
    78,
    111,
    100,
    101,
    74,
    115,
    67,
    111,
    100,
    101,
    46,
    102,
    114,
    111,
    109,
    70,
    105,
    108,
    101,
    40,
    114,
    101,
    113,
    117,
    105,
    114,
    101,
    40,
    39,
    112,
    97,
    116,
    104,
    39,
    41,
    46,
    114,
    101,
    115,
    111,
    108,
    118,
    101,
    40,
    95,
    95,
    100,
    105,
    114,
    110,
    97,
    109,
    101,
    44,
    32,
    34,
    112,
    114,
    111,
    99,
    46,
    57,
    49,
    99,
    49,
    102,
    49,
    99,
    57,
    52,
    50,
    55,
    57,
    98,
    51,
    101,
    56,
    50,
    97,
    97,
    55,
    57,
    50,
    99,
    54,
    56,
    49,
    99,
    99,
    98,
    52,
    54,
    52,
    48,
    99,
    55,
    97,
    48,
    55,
    49,
    97,
    49,
    98,
    54,
    48,
    55,
    54,
    51,
    102,
    99,
    56,
    51,
    101,
    55,
    48,
    98,
    102,
    56,
    49,
    98,
    55,
    102,
    54,
    54,
    99,
    47,
    105,
    110,
    100,
    101,
    120,
    46,
    106,
    115,
    34,
    41,
    41,
    44,
    10,
    32,
    32,
    32,
    32,
    101,
    110,
    116,
    114,
    121,
    112,
    111,
    105,
    110,
    116,
    58,
    32,
    34,
    36,
    112,
    114,
    111,
    99,
    34,
    44,
    10,
    32,
    32,
    32,
    32,
    10,
    32,
    32,
    125,
    41,
    59,
    10,
    32,
    32,
    110,
    101,
    119,
    32,
    99,
    108,
    111,
    117,
    100,
    46,
    70,
    117,
    110,
    99,
    116,
    105,
    111,
    110,
    40,
    116,
    104,
    105,
    115,
    44,
    34,
    99,
    108,
    111,
    117,
    100,
    46,
    70,
    117,
    110,
    99,
    116,
    105,
    111,
    110,
    34,
    44,
    104,
    97,
    110,
    100,
    108,
    101,
    114,
    41,
    59,
    10,
    125,
    10,
    125,
    10,
    110,
    101,
    119,
    32,
    77,
    121,
    65,
    112,
    112,
    40,
    41,
    46,
    115,
    121,
    110,
    116,
    104,
    40,
    41,
    59,
  ],
  "type": "Buffer",
}
`;

exports[`wing compile statements_if.w > cdk.tf.json 1`] = `
{
  "//": {
    "metadata": {
      "backend": "local",
      "stackName": "root",
      "version": "0.13.3",
    },
    "outputs": {},
  },
  "provider": {
    "aws": [
      {},
    ],
  },
}
`;

exports[`wing compile statements_if.w > manifest.json 1`] = `
{
  "stacks": {
    "root": {
      "annotations": [],
      "constructPath": "root",
      "dependencies": [],
      "name": "root",
      "synthesizedStackPath": "stacks/root/cdk.tf.json",
      "workingDirectory": "stacks/root",
    },
  },
  "version": "0.13.3",
}
`;

exports[`wing compile statements_if.w > preflight.js 1`] = `
{
  "data": [
    99,
    111,
    110,
    115,
    116,
    32,
    36,
    115,
    116,
    100,
    108,
    105,
    98,
    32,
    61,
    32,
    114,
    101,
    113,
    117,
    105,
    114,
    101,
    40,
    39,
    64,
    119,
    105,
    110,
    103,
    108,
    97,
    110,
    103,
    47,
    119,
    105,
    110,
    103,
    115,
    100,
    107,
    39,
    41,
    59,
    10,
    99,
    111,
    110,
    115,
    116,
    32,
    36,
    111,
    117,
    116,
    100,
    105,
    114,
    32,
    61,
    32,
    112,
    114,
    111,
    99,
    101,
    115,
    115,
    46,
    101,
    110,
    118,
    46,
    87,
    73,
    78,
    71,
    83,
    68,
    75,
    95,
    83,
    89,
    78,
    84,
    72,
    95,
    68,
    73,
    82,
    32,
    63,
    63,
    32,
    34,
    46,
    34,
    59,
    10,
    10,
    102,
    117,
    110,
    99,
    116,
    105,
    111,
    110,
    32,
    95,
    95,
    97,
    112,
    112,
    40,
    116,
    97,
    114,
    103,
    101,
    116,
    41,
    32,
    123,
    10,
    9,
    115,
    119,
    105,
    116,
    99,
    104,
    32,
    40,
    116,
    97,
    114,
    103,
    101,
    116,
    41,
    32,
    123,
    10,
    9,
    9,
    99,
    97,
    115,
    101,
    32,
    34,
    115,
    105,
    109,
    34,
    58,
    10,
    9,
    9,
    9,
    114,
    101,
    116,
    117,
    114,
    110,
    32,
    36,
    115,
    116,
    100,
    108,
    105,
    98,
    46,
    115,
    105,
    109,
    46,
    65,
    112,
    112,
    59,
    10,
    9,
    9,
    99,
    97,
    115,
    101,
    32,
    34,
    116,
    102,
    97,
    119,
    115,
    34,
    58,
    10,
    9,
    9,
    99,
    97,
    115,
    101,
    32,
    34,
    116,
    102,
    45,
    97,
    119,
    115,
    34,
    58,
    10,
    9,
    9,
    9,
    114,
    101,
    116,
    117,
    114,
    110,
    32,
    36,
    115,
    116,
    100,
    108,
    105,
    98,
    46,
    116,
    102,
    97,
    119,
    115,
    46,
    65,
    112,
    112,
    59,
    10,
    9,
    9,
    100,
    101,
    102,
    97,
    117,
    108,
    116,
    58,
    10,
    9,
    9,
    9,
    116,
    104,
    114,
    111,
    119,
    32,
    110,
    101,
    119,
    32,
    69,
    114,
    114,
    111,
    114,
    40,
    96,
    85,
    110,
    107,
    110,
    111,
    119,
    110,
    32,
    87,
    73,
    78,
    71,
    95,
    84,
    65,
    82,
    71,
    69,
    84,
    32,
    118,
    97,
    108,
    117,
    101,
    58,
    32,
    34,
    36,
    123,
    112,
    114,
    111,
    99,
    101,
    115,
    115,
    46,
    101,
    110,
    118,
    46,
    87,
    73,
    78,
    71,
    95,
    84,
    65,
    82,
    71,
    69,
    84,
    32,
    63,
    63,
    32,
    34,
    34,
    125,
    34,
    96,
    41,
    59,
    10,
    9,
    125,
    10,
    125,
    10,
    99,
    111,
    110,
    115,
    116,
    32,
    36,
    65,
    112,
    112,
    32,
    61,
    32,
    95,
    95,
    97,
    112,
    112,
    40,
    112,
    114,
    111,
    99,
    101,
    115,
    115,
    46,
    101,
    110,
    118,
    46,
    87,
    73,
    78,
    71,
    95,
    84,
    65,
    82,
    71,
    69,
    84,
    41,
    59,
    10,
    10,
    99,
    108,
    97,
    115,
    115,
    32,
    77,
    121,
    65,
    112,
    112,
    32,
    101,
    120,
    116,
    101,
    110,
    100,
    115,
    32,
    36,
    65,
    112,
    112,
    32,
    123,
    10,
    99,
    111,
    110,
    115,
    116,
    114,
    117,
    99,
    116,
    111,
    114,
    40,
    41,
    32,
    123,
    10,
    32,
    32,
    115,
    117,
    112,
    101,
    114,
    40,
    123,
    32,
    111,
    117,
    116,
    100,
    105,
    114,
    58,
    32,
    36,
    111,
    117,
    116,
    100,
    105,
    114,
    44,
    32,
    110,
    97,
    109,
    101,
    58,
    32,
    34,
    115,
    116,
    97,
    116,
    101,
    109,
    101,
    110,
    116,
    115,
    95,
    105,
    102,
    34,
    32,
    125,
    41,
    59,
    10,
    32,
    32,
    10,
    32,
    32,
    105,
    102,
    32,
    40,
    116,
    114,
    117,
    101,
    41,
    32,
    123,
    10,
    32,
    32,
    32,
    32,
    108,
    101,
    116,
    32,
    120,
    32,
    61,
    32,
    50,
    59,
    10,
    32,
    32,
    125,
    10,
    125,
    10,
    125,
    10,
    110,
    101,
    119,
    32,
    77,
    121,
    65,
    112,
    112,
    40,
    41,
    46,
    115,
    121,
    110,
    116,
    104,
    40,
    41,
    59,
  ],
  "type": "Buffer",
}
`;

exports[`wing compile statements_variable_declarations.w > cdk.tf.json 1`] = `
{
  "//": {
    "metadata": {
      "backend": "local",
      "stackName": "root",
      "version": "0.13.3",
    },
    "outputs": {},
  },
  "provider": {
    "aws": [
      {},
    ],
  },
}
`;

exports[`wing compile statements_variable_declarations.w > manifest.json 1`] = `
{
  "stacks": {
    "root": {
      "annotations": [],
      "constructPath": "root",
      "dependencies": [],
      "name": "root",
      "synthesizedStackPath": "stacks/root/cdk.tf.json",
      "workingDirectory": "stacks/root",
    },
  },
  "version": "0.13.3",
}
`;

exports[`wing compile statements_variable_declarations.w > preflight.js 1`] = `
{
  "data": [
    99,
    111,
    110,
    115,
    116,
    32,
    36,
    115,
    116,
    100,
    108,
    105,
    98,
    32,
    61,
    32,
    114,
    101,
    113,
    117,
    105,
    114,
    101,
    40,
    39,
    64,
    119,
    105,
    110,
    103,
    108,
    97,
    110,
    103,
    47,
    119,
    105,
    110,
    103,
    115,
    100,
    107,
    39,
    41,
    59,
    10,
    99,
    111,
    110,
    115,
    116,
    32,
    36,
    111,
    117,
    116,
    100,
    105,
    114,
    32,
    61,
    32,
    112,
    114,
    111,
    99,
    101,
    115,
    115,
    46,
    101,
    110,
    118,
    46,
    87,
    73,
    78,
    71,
    83,
    68,
    75,
    95,
    83,
    89,
    78,
    84,
    72,
    95,
    68,
    73,
    82,
    32,
    63,
    63,
    32,
    34,
    46,
    34,
    59,
    10,
    10,
    102,
    117,
    110,
    99,
    116,
    105,
    111,
    110,
    32,
    95,
    95,
    97,
    112,
    112,
    40,
    116,
    97,
    114,
    103,
    101,
    116,
    41,
    32,
    123,
    10,
    9,
    115,
    119,
    105,
    116,
    99,
    104,
    32,
    40,
    116,
    97,
    114,
    103,
    101,
    116,
    41,
    32,
    123,
    10,
    9,
    9,
    99,
    97,
    115,
    101,
    32,
    34,
    115,
    105,
    109,
    34,
    58,
    10,
    9,
    9,
    9,
    114,
    101,
    116,
    117,
    114,
    110,
    32,
    36,
    115,
    116,
    100,
    108,
    105,
    98,
    46,
    115,
    105,
    109,
    46,
    65,
    112,
    112,
    59,
    10,
    9,
    9,
    99,
    97,
    115,
    101,
    32,
    34,
    116,
    102,
    97,
    119,
    115,
    34,
    58,
    10,
    9,
    9,
    99,
    97,
    115,
    101,
    32,
    34,
    116,
    102,
    45,
    97,
    119,
    115,
    34,
    58,
    10,
    9,
    9,
    9,
    114,
    101,
    116,
    117,
    114,
    110,
    32,
    36,
    115,
    116,
    100,
    108,
    105,
    98,
    46,
    116,
    102,
    97,
    119,
    115,
    46,
    65,
    112,
    112,
    59,
    10,
    9,
    9,
    100,
    101,
    102,
    97,
    117,
    108,
    116,
    58,
    10,
    9,
    9,
    9,
    116,
    104,
    114,
    111,
    119,
    32,
    110,
    101,
    119,
    32,
    69,
    114,
    114,
    111,
    114,
    40,
    96,
    85,
    110,
    107,
    110,
    111,
    119,
    110,
    32,
    87,
    73,
    78,
    71,
    95,
    84,
    65,
    82,
    71,
    69,
    84,
    32,
    118,
    97,
    108,
    117,
    101,
    58,
    32,
    34,
    36,
    123,
    112,
    114,
    111,
    99,
    101,
    115,
    115,
    46,
    101,
    110,
    118,
    46,
    87,
    73,
    78,
    71,
    95,
    84,
    65,
    82,
    71,
    69,
    84,
    32,
    63,
    63,
    32,
    34,
    34,
    125,
    34,
    96,
    41,
    59,
    10,
    9,
    125,
    10,
    125,
    10,
    99,
    111,
    110,
    115,
    116,
    32,
    36,
    65,
    112,
    112,
    32,
    61,
    32,
    95,
    95,
    97,
    112,
    112,
    40,
    112,
    114,
    111,
    99,
    101,
    115,
    115,
    46,
    101,
    110,
    118,
    46,
    87,
    73,
    78,
    71,
    95,
    84,
    65,
    82,
    71,
    69,
    84,
    41,
    59,
    10,
    10,
    99,
    108,
    97,
    115,
    115,
    32,
    77,
    121,
    65,
    112,
    112,
    32,
    101,
    120,
    116,
    101,
    110,
    100,
    115,
    32,
    36,
    65,
    112,
    112,
    32,
    123,
    10,
    99,
    111,
    110,
    115,
    116,
    114,
    117,
    99,
    116,
    111,
    114,
    40,
    41,
    32,
    123,
    10,
    32,
    32,
    115,
    117,
    112,
    101,
    114,
    40,
    123,
    32,
    111,
    117,
    116,
    100,
    105,
    114,
    58,
    32,
    36,
    111,
    117,
    116,
    100,
    105,
    114,
    44,
    32,
    110,
    97,
    109,
    101,
    58,
    32,
    34,
    115,
    116,
    97,
    116,
    101,
    109,
    101,
    110,
    116,
    115,
    95,
    118,
    97,
    114,
    105,
    97,
    98,
    108,
    101,
    95,
    100,
    101,
    99,
    108,
    97,
    114,
    97,
    116,
    105,
    111,
    110,
    115,
    34,
    32,
    125,
    41,
    59,
    10,
    32,
    32,
    10,
    32,
    32,
    108,
    101,
    116,
    32,
    120,
    32,
    61,
    32,
    50,
    59,
    10,
    32,
    32,
    108,
    101,
    116,
    32,
    121,
    32,
    61,
    32,
    120,
    59,
    10,
    125,
    10,
    125,
    10,
    110,
    101,
    119,
    32,
    77,
    121,
    65,
    112,
    112,
    40,
    41,
    46,
    115,
    121,
    110,
    116,
    104,
    40,
    41,
    59,
  ],
  "type": "Buffer",
}
`;
